fix:校正部分文章结构和错误

--- a/source/_posts/🍓前端知识分类/CSS相关类/常见布局.md
+++ b/source/_posts/🍓前端知识分类/CSS相关类/常见布局.md
@@ -1,6 +1,7 @@
-# flex实现九宫格
+# flex实现自适应九宫格
 
 每个item宽高相等
+
 1. `box-sizing: border-box;`， 使用该属性，则 
    1. width = content + border + padding
    2. height = content + border + padding
@@ -21,7 +22,7 @@
 ```
 
 ```css
-.inner {
+.flex {
     width: 100%;
     height: 100%;
     display: flex;
@@ -34,6 +35,54 @@
     border: 1px #ccc solid;
 }
 ```
+
+
+
+
+
+# grid自适应9宫格
+
+
+bug: 这么写其实item 的宽高是不相等的
+
+```html
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+    <style>
+      .grid {
+        display: grid;
+        height: 100%;
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(3, 1fr);
+      }
+      .item {
+        background: lightblue;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="grid">
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+    </div>
+  </body>
+</html>
+
+```
+
+
+
 
 
 # 圣杯/双飞翼布局
