--- a/source/_posts/🍓前端知识分类/JS相关类/函数柯里化.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/函数柯里化.md
@@ -1,5 +1,10 @@
 # 函数柯里化
 
+> 柯里化，也常译为“局部套用”，是把多参数函数转换为一系列单参数函数并进行调用的技术。这项技术以科学家Haskell Curry的名字命名。
+>    《javascript语言精粹》
+
+> curry 方法通过创建一个保存着原始函数和要被调用的参数的闭包来工作，他返回另一个参数，该函数被调用时，会返回调用原始函数的结果，并传递调用curry时的参数加上当前调用时的参数
+
 
 
 ## 应用场景
@@ -38,12 +43,12 @@ fourDiscount(300)  // 120
 
 
 
-## 柯里化实现
+## 写法1: 基础实现
 
-- **函数柯里化** 它用于创建已经设置好了一个或多个参数的函数。
-- 函数柯里化的基本方法和函数绑定是一样的：使用一个闭包返回一个函数，两者的区别在于，当函数被调用时，返回的函数还需要设置一些传入的参数（如上面折扣的例子，fiveDiscount()调用时还需要参数price）
+**函数柯里化** 它用于创建已经设置好了一个或多个参数的函数。
+函数柯里化的基本方法和函数绑定是一样的：使用一个闭包返回一个函数，两者的区别在于，当函数被调用时，返回的函数还需要设置一些传入的参数（如上面折扣的例子，fiveDiscount()调用时还需要参数price）
 
-- 函数柯里化通常与以下步骤动态 **创建**：调用另一个函数并为他传入要`柯里化的函数`和`必要参数`
+函数柯里化通常与以下步骤动态 **创建**：调用另一个函数并为他传入要`柯里化的函数`和`必要参数`
 
 
 ```javascript
@@ -73,6 +78,7 @@ curriedAdd(3);  // 8
 
 ```
 
+
 也可以像这样一次性给出所有参数
 
 ```javascript
@@ -84,10 +90,12 @@ curriedAdd();  // 8
 
 
 
-## ES6简化版本
+## 写法2: ES6简化版本
 
-- 结合ES6语法将`curry()`结构进行简化
-- 由于箭头函数没有绑定argumens, 所以如果在箭头函数内部访问`arguments`对象，他会向上查找, 绑定距离最近的非箭头函数的arguments对象
+结合ES6语法将`curry()`结构进行简化
+由于箭头函数没有绑定argumens, 所以如果在箭头函数内部访问`arguments`对象，他会向上查找, 绑定距离最近的非箭头函数的arguments对象
+
+
 
 ```javascript
 /**
@@ -105,13 +113,13 @@ function curry(fn, ...args) {
 
 
 
+## 写法3: 健壮版
 
-## 最终版本
 
-
-但是以上写法存在问题，我们只能传递两次参数，要么第一次给一部分，第二次给一部分，要么一次性给出所有参数，然后在调用函数，但是如果我们不确定每次传递参数的 **个数** 和 **次数**
+🐞BUT ,以上写法存在问题，我们只能传递两次参数，要么第一次给一部分，第二次给一部分，要么一次性给出所有参数，然后在调用函数，但是如果我们不确定每次传递参数的 **个数** 和 **次数**，则以上写法则不可行：
 
 如果传入的fn是
+
 
 ```javascript
 const add = function(val1, val2, val3, val4, val5) {
@@ -119,16 +127,24 @@ const add = function(val1, val2, val3, val4, val5) {
 };
 ```
 
-用户的调用顺序为这些情况，那我们的curry就不符合需求了
 
-```javascript
-curry(add, 1)(2, 3)(4)(5);
-curry(add)(1, 2, 3, 4, 5);
-curry(add)(1, 2)(3, 4, 5);
+```js
+/* ✅仅该种情况下可行，即一次性传入所有参数 */
+curry(add, 1, 2, 3, 4, 5)(); // 15
+
+/* ✅仅该种情况下可行，即分两次传入所有参数 */
+let res = curry(add, 1)(2, 3, 4, 5); // 15
+
+
+/* ❌调用次数大于两次则不可行 */
+curry(add, 1)(2, 3)(4)(5) // curry(...)(...) is not a function
+curry(add, 1)(2)(3)(4)(5) // curry(...)(...) is not a function
 ```
 
-使curry更加健壮，我们需要判断用于是否已经输入了所有的参数（fn.length），
-如果还没有输入完毕，则返回一个函数使用户可以继续输入；若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
+ 
+为了使curry更加健壮，我们需要判断用于是否已经输入了所有的参数（fn.length），
+若参数还未输入完毕，则返回一个函数使用户可以继续输入；
+若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
 
 
 ```javascript
@@ -152,12 +168,34 @@ function curry(fn, ...args) {
 }
 
 ```
+
 调用一下试试看,  都可以得到正确的结果
 
 ```javascript
 console.log(curry(add, 1)(2, 3)(4)(5)); // 15
 console.log(curry(add)(1, 2, 3, 4, 5)); // 15
 console.log(curry(add)(1, 2)(3, 4, 5)); // 15
+```
+
+
+## 写法4: 小李简化版本
+
+
+```js
+const add = function(val1, val2, val3, val4, val5) {
+  return val1 + val2 + val3 + val4 + val5;
+};
+
+function curry(fn, ...args) {
+  if (fn.length > args.length) {
+    return (...innerArgs) => curry.call(this, fn, ...args, ...innerArgs);
+  } else {
+    return fn.apply(this, args);
+  }
+}
+
+let res = curry(add, 1)(2, 3)(4)(5);
+console.log(res); // 15
 ```
 
 
@@ -196,10 +234,11 @@ threeDiscount(300);  // 90.00000000000001
 
 ```
 
+
 ## 参考文章
 
-- [《javascript语言精粹》(第四章-函数)]
-- [《javascript高级程序设计-高级技巧》(第22章-高级技巧)]
-- [箭头函数MDN]
-- [「译」理解JavaScript的柯里化](https://juejin.im/post/5bf18715e51d45244939acc5)
-- [冴羽ES6函数柯里化](https://github.com/mqyqingfeng/Blog/issues/42)
+1. [《javascript语言精粹》(第四章-函数)]
+2. [《javascript高级程序设计-高级技巧》(第22章-高级技巧)]
+3. [箭头函数MDN]
+4. [「译」理解JavaScript的柯里化](https://juejin.im/post/5bf18715e51d45244939acc5)
+5. [冴羽ES6函数柯里化](https://github.com/mqyqingfeng/Blog/issues/42)
