--- a/source/_posts/🍓前端知识分类/JS相关类/数组.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/数组.md
@@ -1,26 +1,23 @@
-[TOC]
-
-# Array类型ES6新特性
-
- 
-
 
 ## 数组解构赋值
 
+
 解构赋值, 就是按照一定的规则从数组或者对象中提取到值，然后再赋值给变量
+
 
 **书写格式**
 
 情况一：normal——位置形式对应正确即可
 
+
 ```javascript
-let [a,y,z]=['pig','cat','dog'];    //x,y,c分别正确拿到'pig','cat','dog'
-let [x, [[y], z]] = ['pig', [['cat'], 'dog']];      // x,y,c分别正确拿到'pig','cat','dog'
-let [ , , z] = ['pig','cat','dog'];       // z 正确拿到 'dog'
-let [x, ,z] = ['pig','cat','dog'];        // x,z 分别正确拿到 'pig'，'dog'
-let [x,y,z]=['pig','cat','dog'];    //x,y,c分别正确拿到'pig','cat','dog'
+let [a, y, z] = ["pig", "cat", "dog"]; //x,y,c分别正确拿到'pig','cat','dog'
+let [x, [[y], z]] = ["pig", [["cat"], "dog"]]; // x,y,c分别正确拿到'pig','cat','dog'
+let [, , z] = ["pig", "cat", "dog"]; // z 正确拿到 'dog'
+let [x, , z] = ["pig", "cat", "dog"]; // x,z 分别正确拿到 'pig'，'dog'
+let [x, y, z] = ["pig", "cat", "dog"]; //x,y,c分别正确拿到'pig','cat','dog'
 // 不完全解构
-let [x, [y], d] = ['pig', ['cat', 'cow'], 'dog']    //
+let [x, [y], d] = ["pig", ["cat", "cow"], "dog"]; //
 ``` 
 
 
@@ -31,7 +28,6 @@ let [x,y, ...z] = [1, 2, 3, 4]        // x = 1; y=2; z=[3,4]
 ```
 
 
-
 情况三：解构不成功，该变量即为undefined
 
 ```javascript
@@ -39,7 +35,8 @@ let [x] = [];               // x 是undefined
 let [x, y] = ['pig'];       // x='pig';y 是undefined
 ```
 
-情况四：=右边不是可遍历的对象就会报错
+
+情况四：= 右边不是可遍历的对象就会报错
 
 ```javascript
 // 报错
@@ -84,15 +81,15 @@ let [x = y, y = 1] = [];     // ReferenceError: y is not defined
 **使用举例**：
 
 ```javascript
-    // 例1
-    var items1 = [1,2,3]
-    console.log(items1) //1,2,3
+// 例1
+var items1 = [1,2,3]
+console.log(items1) //1,2,3
 
-    // 例2 >> 替代apply将数组转为函数的参数
-    function add(...items1){
-        console.log(arguments)
-    }
-    add(...items1)   
+// 例2 >> 替代apply将数组转为函数的参数
+function add(...items1){
+    console.log(arguments)
+}
+add(...items1)   
 
     // 例2 >> 合并数组
     var items2 = [4,5]
