--- a/source/_posts/🍓前端知识分类/JS相关类/深拷贝.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/深拷贝.md
@@ -28,19 +28,7 @@ JSON.parse(JSON.stringify(obj))
 ```
 
 
-
-<!--  -->
 <!-- ## 我发现使用map也可以实现深拷贝 -->
-<!--  -->
-<!-- - 但是应该有很多种情况没有考虑，比如传进来的如果不是对象 -->
-<!--  -->
-<!-- ```javascript -->
-<!-- function clone(source) { -->
-  <!-- const iterableArr = Object.entries(source); -->
-  <!-- return Object.fromEntries(new Map(iterableArr)); -->
-<!-- } -->
-<!-- ``` -->
-
 
 
 
@@ -54,6 +42,15 @@ JSON.parse(JSON.stringify(obj))
 WeakMap 与Map的区别是，WeakMap的键只能是对象，否则报错
 WeakMap 作为存储是因为他的键名所引用的对象都是弱引用
 
+==仍然存在的问题==：
+```js
+const map2 = new Map();
+map2.set(Symbol(0), 0);
+map2.set(Symbol(0), 0);
+console.log(map2);
+```
+
+ 
 
 ```javascript
 /**
@@ -88,6 +85,9 @@ const clone = function(source, map = new Map()) {
 let obj = {};
 obj.circleRef = obj;
 ```
+
+
+
 
 
 
@@ -207,12 +207,8 @@ function baseClone(value, bitmask, customizer, key, object, stack) {
     return value;
   }
   const isArr = Array.isArray(value);
-  // function getTag(value) {
-  //   if (value == null) {
-  //     return value === undefined ? "[object Undefined]" : "[object Null]";
-  //   }
-  //   Object.prototype.toString.call(value);
-  // }
+
+
   const tag = getTag(value);
   if (isArr) {
     // 初始化一个空数组
@@ -293,3 +289,8 @@ function baseClone(value, bitmask, customizer, key, object, stack) {
 }
 
 ```
+
+
+# 参考文章
+
+1. 
