--- a/source/_posts/🍓前端知识分类/网络和安全类/加密算法.md
+++ b/source/_posts/🍓前端知识分类/网络和安全类/加密算法.md
@@ -1,8 +1,8 @@
 
-## 对称加密
+# 对称加密
 
-对称加密：
-即收发信双方采用用同样的**密钥**进行加密和解密，密钥是控制加密及解密过程的指令。
+
+对称加密，即收发信双方采用用同样的**密钥**进行加密和解密，密钥是控制加密及解密过程的指令。
 算法是一组规则，规定如何进行加密和解密；
 
 客户端和服务器端各自拥有一把相同的钥匙，客户端或者服务器端发送消息均是使用这把钥匙进行加密，同样收到消息也是使用这把钥匙进行解密；
