--- a/source/_posts/_乱七八拉糟/生活记录.md
+++ b/source/_posts/_乱七八拉糟/生活记录.md
@@ -9,74 +9,74 @@
 2. 傍晚时分，你坐在屋檐下，看着天慢慢的黑下去，心里寂寞而凄凉，感到自己的生命被剥夺了。当时我是个年轻人，但是我害怕这样生活下去，衰老下去。在我看来，这是比死亡更可怕的事情。  - 《沉默的大多数》
 
 
-<!--  -->
-<!-- ## vue相关  -->
- <!--  -->
-<!-- 1. [ ]  深度监听具体的解决办法，我看使用$set, 一定会定义一个函数，并不适用v-model 的情况；  -->
-<!-- 2. [x]  vue开发规范  -->
- <!--  -->
-<!-- ## 算法相关  -->
- <!--  -->
-<!-- 1. [x]  二叉树前、中、后序排序；  -->
- <!--  -->
- <!--  -->
-<!-- ## CSS相关  -->
- <!--  -->
-<!-- 1. [x]  less大概看一下，心里有个数  -->
-<!-- 2. [x]  实现居中的几种方法总结下  -->
-<!-- 3. [ ]  包括flex的特性失效的情况  -->
-<!-- 4. [x]  布局：  -->
-   <!-- 1. [x]  圣杯布局/双翼杯布局(中间先渲染，两侧固定宽度，中间自适应)  -->
- <!--  -->
-<!--  -->
- <!--  -->
- <!--  -->
-<!-- ## 总结  -->
- <!--  -->
-<!-- CSS  -->
-<!-- 1. [x]  移动端1px怎么处理？出现原因;  -->
-<!-- 2. [ ]  rem和em区别？  -->
-<!-- 3. [ ]  处理过哪些css兼容性问题？  -->
-<!-- 4. [ ]  用什么css预编译器(我说的scss)？你认为 scss 和css 的区别？  -->
- <!--  -->
- <!--  -->
-<!-- Javascript  -->
-<!-- 1. [ ]  forEach 和 for循环区别？如何停止？(详见for和forEach区别)  -->
-   <!-- 1. forEach   -->
-  <!-- 1. 适用于不清楚循环次数或判断长度耗费性能；  -->
-  <!-- 2. 除了抛出异常，无法终止循环；  -->
-   <!-- 2. for  -->
-  <!-- 1. 循环可以使用continue，break 来控制循环和跳出循环；  -->
-  <!-- 2.   -->
-<!-- 2. [ ]  常用的es6有哪些？  -->
-<!-- 3. [ ]  every和some区别？  -->
-<!-- 4. [x]  new Set([undefined,NaN,NaN,1,'1',{},{}])  的处理结果？  -->
-   <!-- 1. 结果： { undefined, NaN, 1, '1', {}, {} }  -->
-   <!-- 2. Set加入值的时候不会进行类型转换；  -->
-   <!-- 3. Set比较值使用的 “Same-value-zero equality” 算法，该算法与 === 的区别在于，认为 NaN等于自身；  -->
-   <!-- 4. (无论哪个算法) 对象永远是不相等的；  -->
-<!-- 5. [ ]  ES6，你常用的特性有哪些？  -->
- <!--  -->
- <!--  -->
- <!--  -->
-<!-- vue  -->
-<!-- 1. [ ]  key值相同会怎么样？为什么不能相同？  -->
-<!-- 2. [ ]  你认为React和Vue优缺点？  -->
- <!--  -->
- <!--  -->
-<!-- 打包  -->
-<!-- 1. [ ]  打包工具(我说的webpack, 但是看他不是很满意)  -->
- <!--  -->
- <!--  -->
- <!--  -->
-<!-- 其他  -->
-<!-- 1. [ ]  项目中遇到的印象深刻的问题？  -->
-<!-- 2. [ ]  flutter晓得不?（想看我是否对新技术有了解）  -->
-<!-- 3. [ ]  你认为前端要学什么？（说这个加分，看知识面）  -->
-<!-- 4. [ ]  有哪些开发小程序？  -->
-<!-- 5. [ ]  你有什么想问我的么？  -->
-<!-- 6. [ ]  H5项目，如何处理兼容性？  -->
-<!-- 7. [ ]  对项目有什么技术推动？有团队内做过技术分享么？分享的什么？  -->
-<!-- 8. [ ]  怎么学习前端的？(我说看书，看视频，看博客)看了哪些书？  -->
- <!--  -->
- <!--  -->
+  
+ ## vue相关  
+   
+ 1. [ ]  深度监听具体的解决办法，我看使用$set, 一定会定义一个函数，并不适用v-model 的情况；  
+ 2. [x]  vue开发规范  
+   
+ ## 算法相关  
+   
+ 1. [x]  二叉树前、中、后序排序；  
+   
+   
+ ## CSS相关  
+   
+ 1. [x]  less大概看一下，心里有个数  
+ 2. [x]  实现居中的几种方法总结下  
+ 3. [ ]  包括flex的特性失效的情况  
+ 4. [x]  布局：  
+    1. [x]  圣杯布局/双翼杯布局(中间先渲染，两侧固定宽度，中间自适应)  
+   
+  
+   
+   
+ ## 总结  
+   
+ CSS  
+ 1. [x]  移动端1px怎么处理？出现原因;  
+ 2. [ ]  rem和em区别？  
+ 3. [ ]  处理过哪些css兼容性问题？  
+ 4. [ ]  用什么css预编译器(我说的scss)？你认为 scss 和css 的区别？  
+   
+   
+ Javascript  
+ 1. [ ]  forEach 和 for循环区别？如何停止？(详见for和forEach区别)  
+    1. forEach   
+   1. 适用于不清楚循环次数或判断长度耗费性能；  
+   2. 除了抛出异常，无法终止循环；  
+    2. for  
+   1. 循环可以使用continue，break 来控制循环和跳出循环；  
+   2.   
+ 2. [ ]  常用的es6有哪些？  
+ 3. [ ]  every和some区别？  
+ 4. [x]  new Set([undefined,NaN,NaN,1,'1',{},{}])  的处理结果？  
+    1. 结果： { undefined, NaN, 1, '1', {}, {} }  
+    2. Set加入值的时候不会进行类型转换；  
+    3. Set比较值使用的 “Same-value-zero equality” 算法，该算法与 === 的区别在于，认为 NaN等于自身；  
+    4. (无论哪个算法) 对象永远是不相等的；  
+ 5. [ ]  ES6，你常用的特性有哪些？  
+   
+   
+   
+ vue  
+ 1. [ ]  key值相同会怎么样？为什么不能相同？  
+ 2. [ ]  你认为React和Vue优缺点？  
+   
+   
+ 打包  
+ 1. [ ]  打包工具(我说的webpack, 但是看他不是很满意)  
+   
+   
+   
+ 其他  
+ 1. [ ]  项目中遇到的印象深刻的问题？  
+ 2. [ ]  flutter晓得不?（想看我是否对新技术有了解）  
+ 3. [ ]  你认为前端要学什么？（说这个加分，看知识面）  
+ 4. [ ]  有哪些开发小程序？  
+ 5. [ ]  你有什么想问我的么？  
+ 6. [ ]  H5项目，如何处理兼容性？  
+ 7. [ ]  对项目有什么技术推动？有团队内做过技术分享么？分享的什么？  
+ 8. [ ]  怎么学习前端的？(我说看书，看视频，看博客)看了哪些书？  
+   
+   
