fix:部分文章修改

--- a/source/_posts/🍓前端知识分类/JS相关类/函数的执行顺序.md
+++ b/source/_posts/🍓前端知识分类/JS相关类/函数的执行顺序.md
@@ -69,3 +69,61 @@ b();
 
 
 ## 题目2
+
+```js
+async function async1() {
+  console.log(1);
+  const res = await async2();
+  console.log(3);
+}
+
+async function async2() {
+  console.log(2);
+}
+
+Promise.resolve().then(() => {
+  console.log(4);
+});
+
+setTimeout(() => {
+  console.log(5);
+});
+
+async1();
+console.log(6);
+
+// 1
+// 2
+// 6
+// 4
+// 3
+// 5
+```
+
+这个题目又让我重新开始疑惑异步函数的执行顺序问题了
+
+
+## 题目三
+
+```js
+const promise1 = new Promise((resolve, reject) => {
+  console.log(1);
+  resolve();
+  reject();
+  console.log(2);
+});
+promise1.then(
+  () => {
+    console.log(3);
+  },
+  () => {
+    console.log("失败状态");
+  }
+);
+console.log(4);
+
+// 1
+// 2
+// 4
+// 3
+```
