--- a/source/_posts/🍓前端知识分类/性能优化类/防抖和节流.md
+++ b/source/_posts/🍓前端知识分类/性能优化类/防抖和节流.md
@@ -1,5 +1,6 @@
 # 防抖和节流
 
+=> [测试地址](https://jsbin.com/rebucuputi/edit?html,css,output)
 
 ## 防抖
 高频事件在规定的事件只执行一次，如规定的时间内再次触发，则重新计算时间
@@ -34,8 +35,8 @@ function debounce(func, wait = 1000) {
 1. 节流1:时间戳
 
 特点
-  - 第一次触发即立即执行
-  - 最后一次触发离开后不会再执行
+- 第一次触发即立即执行
+- 最后一次触发离开后不会再执行
 
 实现思路：设置一个时间戳，调用函数的时候，如果当前的时间戳减去设置的时间错，大于wait,则执行函数；若小于则不执行；
 
@@ -81,9 +82,10 @@ function throttle(func, wait = 1000) {
 ```
 
 ### 节流3:结合版
-- 特点
-  - 第一次触发即立即执行
-  - 最后一次触发离开后仍执行执行
+
+特点
+- 第一次触发即立即执行
+- 最后一次触发离开后仍执行执行
 
 ```javascript
 function throttle(func, wait) {
