--- a/source/_posts/🐖小李的读书笔记/设计模式.md
+++ b/source/_posts/🐖小李的读书笔记/设计模式.md
@@ -1,24 +1,4 @@
-## 常见的设计模式
-1. 单例模式
-2. 策略模式
-3. 发布订阅者模式
-4. 代理模式
-5. 迭代器模式
-6. 中介者模式
-7. 享元模式
-8. 职责链模式
-9. 装饰着模式
-10. 状态模式
-11. 适配器模式
-12. 组合模式
-13. 模版方法模式
-14. 命令模式
-
-
-
-
-
-## 多态处理
+# 多态处理
 
 1. 什么叫多态？
 > 对不同的对象执行统一操作，分别得到不同的结果；比如，操作让动物们，“叫”，鸭子🦆会“嘎嘎嘎”，牛🐂会“哞哞哞”；这就是多态；
@@ -79,6 +59,28 @@ makeSound(new Duck())
 makeSound(new Cat())
 
 ```
+
+
+# 常见的设计模式
+
+1. 单例模式
+2. 策略模式
+3. 发布订阅者模式
+4. 代理模式
+5. 迭代器模式
+6. 中介者模式
+7. 享元模式
+8. 职责链模式
+9. 装饰着模式
+10. 状态模式
+11. 适配器模式
+12. 组合模式
+13. 模版方法模式
+14. 命令模式
+
+
+
+
 
 
 
@@ -315,10 +317,10 @@ salesoffices.trigger(3000, 40)
 
 
 
-## 代理模式
+# 代理模式
 
 
-## 设计原则和编程技巧
+# 设计原则和编程技巧
 
 1. 单一职责
 2. 最少知识原则
@@ -333,6 +335,6 @@ salesoffices.trigger(3000, 40)
    3. 
 
 
-## 参考文章
+# 参考文章
 
 1. 《JavaScript设计模式与开发实践-曾探》
