--- a/source/_posts/🍓前端知识分类/网络和安全类/前端鉴权.md
+++ b/source/_posts/🍓前端知识分类/网络和安全类/前端鉴权.md
@@ -1,21 +1,20 @@
 
-## 为什么要鉴权？
+# 为什么要鉴权？
 
-HTTP是一种无状态的请求，所以后端不能通过请求来`区分和管理请求和响应`，也就是说服务无法单从请求上鉴别客户的身份;
+HTTP是一种无状态的请求，所以后端不能通过请求来区分和管理请求和响应，也就是说 ==服务器无法单从请求上鉴别客户的身份==;
 
 所以服务器端需要一个标志信息，来标识请求方的身份，依次判定是否返回数据给请求方（鉴权）；
 
 
 鉴权通常有三种方式：
+
 1. cookies
 2. session
 3. token(jwt token的升级版)
 
 
 
-
-
-## cookies
+# cookies
 
 服务器给客户端颁发的的一个通行证，用来区分客户身份
 后端向前端返回报文的同时，向浏览器写入cookie，用户下次请求会携带cookie，后端查询数据库鉴别用户
@@ -25,7 +24,7 @@ HTTP是一种无状态的请求，所以后端不能通过请求来`区分和管
 
 
 
-## session
+# session
 
 - session是另一种用户记录服务器和客户端会话状态的方式
 - session是一对， sessionId 存在客户端, 对应的session存储在服务端
@@ -34,11 +33,8 @@ HTTP是一种无状态的请求，所以后端不能通过请求来`区分和管
 <img src='https://user-gold-cdn.xitu.io/2020/4/7/171534560ae2067b?imageView2/0/w/1280/h/960/format/webp/ignore-error/1'>
 
 
-
 缺点:
 1. 占资源，每个经过认证的用户都要存放session到内存中，而随着认证用户的增多，服务端的开销增大；
-
-缺点：
 2. CSFR攻击：基于cookie进行用户识别时，如果cookie被截获，很容易收到跨站请求伪造的攻击
 
 
@@ -50,17 +46,16 @@ cookie和session对比
  
 
 
-## token
-> token(令牌) 是一串字符串，通常作为鉴权凭据，最常用的使用场景是 API 鉴权。
+# token
 
+> token(令牌) 是一串字符串，通常作为鉴权凭据，最常用的使用场景是 API 鉴权
+
+用户请求登录后，后端返回一个token,这个token是加密过的， 用户后面的每次请求都要带着token
+  
 token一般来说，有三种
 1. 自定义的token, 开发人员根据业务逻辑自定义的
 2. JWT：JSON Web Token，定义在 RFC 7519 中的一种 token 规范
 3. Oauth2.0：定义在 RFC 6750 中的一种授权规范，其实并不是一种 token，只是其中也有用到 token。
-
-
-- 用户请求登录后，后端返回一个token,这个token是加密过的， 用户后面的每次请求都要带着token
-优点
 
 
 
@@ -68,16 +63,17 @@ token一般来说，有三种
 
 ## 基于token的身份验证实际开发中的处理步骤
 
-/**
- * 基于token的验证原理
- * 1. 登录时，客户端发送用户名和密码；
- * 2. 服务器端校验通过就会发送一个有时效的token串，发送给客户端；
- * 3. 客户端拿到token, 一般都会存储在localStorage或者cookies里；
- * 4. 客户端每次请求都带有token, 可以将其放在请求头里面，每次请求都携带token
- * 5. 服务端验证token, 所有需要校验身份的接口都会被校验token, 若token解析后的数据包含用户身份信息，则返回数据，否则抛出错误
- */
 
-## JWT 
+基于token的验证原理
+1. 登录时，客户端发送用户名和密码；
+2. 服务器端校验通过就会发送一个有时效的token串，发送给客户端；
+3. 客户端拿到token, 一般都会存储在localStorage或者cookies里；
+4. 客户端每次请求都带有token, 可以将其放在请求头里面，每次请求都携带token
+5. 服务端验证token, 所有需要校验身份的接口都会被校验token, 若token解析后的数据包含用户身份信息，则返回数据，否则抛出错误
+
+
+
+# JWT 
 
 JWT由三部分组成：
 1. header 头部
@@ -85,10 +81,10 @@ JWT由三部分组成：
 3. signature 签证
 
 
-### header
+## header
 
-1. 声明类型， 这是jwt
-2. 声明类型的算法，通常直接使用 HMAC SHA256
+1. ==声明类型==， 这是jwt
+2. ==声明类型的算法==，通常直接使用 HMAC SHA256
 
 完整的头部如下
 
@@ -106,7 +102,7 @@ JWT由三部分组成：
 `eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9`
 
 
-### payload
+## payload
 
 存放有效信息的地方。由三部分组成
 
@@ -137,7 +133,7 @@ JWT由三部分组成：
 
 
 
-### signature
+## signature
 
 第三部分是一个签证信息，该签证信息由三部分组成
 1. header(base64后的)
@@ -160,10 +156,10 @@ const signature = HMACSHA256(encodeString, 'secret')
 `eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ`
 
 
-> jwt是保存在服务器端，jwt的签发也是发生在服务器端的，secret就是用来进行jwt的签发和jwt的验证，所以他就是服务器端的私钥，任何场景都不应该泄露给客户端。
+> jwt是保存在服务器端，jwt的签发也是发生在服务器端的，==secret就是用来进行jwt的签发和jwt的验证==，所以他就是服务器端的私钥，任何场景都不应该泄露给客户端。
 > 一旦客户端得知这个secret, 那就意味着客户端可以自我签发jwt了
 
-### 应用：
+## 应用：
 
 一般是在请求头添加 `Authorization`, 并添加  `Bearer` 标注
 
@@ -177,7 +173,7 @@ fetch('api/user/1', {
 
 
 优点
-  1. 不需要操作数据库，直接代码里校验
+1. 不需要操作数据库，直接代码里校验
 
 
 [什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
