fix:这次修改很莫名其妙

--- a/source/_posts/_乱七八拉糟/生活记录.md
+++ b/source/_posts/_乱七八拉糟/生活记录.md
@@ -8,75 +8,9 @@
 
 2. 傍晚时分，你坐在屋檐下，看着天慢慢的黑下去，心里寂寞而凄凉，感到自己的生命被剥夺了。当时我是个年轻人，但是我害怕这样生活下去，衰老下去。在我看来，这是比死亡更可怕的事情。  - 《沉默的大多数》
 
+3. 这种痛苦的顶点不是被拘押在旅馆里没有书看、没有合适的谈话伙伴，而是被放在外面，感到天地之间同样寂寞，面对和你一样痛苦的同伴。在我们之前，生活过无数的大智者，比方说，罗素、牛顿、莎士比亚，他们的思想和著述可以使我们免于这种痛苦，但我们和他们的思想、著述，已经被隔绝了。一个人倘若需要从思想中得到快乐，那么他的第一个欲望就是学习。我承认，我在抵御这种痛苦方面的确是不够坚强，但我绝不是最差的一个。举例言之，罗素先生在五岁时，感到寂寞而凄凉，就想道：假如我能活到七十岁，那么我这不幸的一生才度过了十四分之一！但是等他稍大一点，接触到智者的思想的火花，就改变了想法。假设他被派去插队，很可能就要自杀了。
+
+4. 谈到思想的乐趣，我就想到了我父亲的遭遇。我父亲是一位哲学教授，在五六十年代从事思维史的研究。在老年时，他告诉我，自己一生的学术经历，就如一部恐怖电影。每当他企图立论时，总要在大一统的官方思想体系里找自己的位置，就如一只老母鸡要在一个大搬家的宅院里找地方孵蛋一样。结果他虽然热爱科学而且很努力，但在一生中却没有得到思维的乐趣，只收获了无数的恐慌。他一生的探索，只剩下了一些断壁残垣，收到一本名为《逻辑探索》的书里，在他身后出版。众所周知，他那一辈的学人，一辈子能留下一本书就不错。这正是因为在那些年代，有人想把中国人的思想搞得彻底无味。我们这个国家里，只有很少的人觉得思想会有乐趣，却有很多的人感受过思想带来的恐慌。所以现在还有很多人以为，思想的味道就该是这样的。   - 《沉默的大多数》
 
   
- ## vue相关  
-   
- 1. [ ]  深度监听具体的解决办法，我看使用$set, 一定会定义一个函数，并不适用v-model 的情况；  
- 2. [x]  vue开发规范  
-   
- ## 算法相关  
-   
- 1. [x]  二叉树前、中、后序排序；  
-   
-   
- ## CSS相关  
-   
- 1. [x]  less大概看一下，心里有个数  
- 2. [x]  实现居中的几种方法总结下  
- 3. [ ]  包括flex的特性失效的情况  
- 4. [x]  布局：  
-    1. [x]  圣杯布局/双翼杯布局(中间先渲染，两侧固定宽度，中间自适应)  
-   
-  
-   
-   
- ## 总结  
-   
- CSS  
- 1. [x]  移动端1px怎么处理？出现原因;  
- 2. [ ]  rem和em区别？  
- 3. [ ]  处理过哪些css兼容性问题？  
- 4. [ ]  用什么css预编译器(我说的scss)？你认为 scss 和css 的区别？  
-   
-   
- Javascript  
- 1. [ ]  forEach 和 for循环区别？如何停止？(详见for和forEach区别)  
-    1. forEach   
-   1. 适用于不清楚循环次数或判断长度耗费性能；  
-   2. 除了抛出异常，无法终止循环；  
-    2. for  
-   1. 循环可以使用continue，break 来控制循环和跳出循环；  
-   2.   
- 2. [ ]  常用的es6有哪些？  
- 3. [ ]  every和some区别？  
- 4. [x]  new Set([undefined,NaN,NaN,1,'1',{},{}])  的处理结果？  
-    1. 结果： { undefined, NaN, 1, '1', {}, {} }  
-    2. Set加入值的时候不会进行类型转换；  
-    3. Set比较值使用的 “Same-value-zero equality” 算法，该算法与 === 的区别在于，认为 NaN等于自身；  
-    4. (无论哪个算法) 对象永远是不相等的；  
- 5. [ ]  ES6，你常用的特性有哪些？  
-   
-   
-   
- vue  
- 1. [ ]  key值相同会怎么样？为什么不能相同？  
- 2. [ ]  你认为React和Vue优缺点？  
-   
-   
- 打包  
- 1. [ ]  打包工具(我说的webpack, 但是看他不是很满意)  
-   
-   
-   
- 其他  
- 1. [ ]  项目中遇到的印象深刻的问题？  
- 2. [ ]  flutter晓得不?（想看我是否对新技术有了解）  
- 3. [ ]  你认为前端要学什么？（说这个加分，看知识面）  
- 4. [ ]  有哪些开发小程序？  
- 5. [ ]  你有什么想问我的么？  
- 6. [ ]  H5项目，如何处理兼容性？  
- 7. [ ]  对项目有什么技术推动？有团队内做过技术分享么？分享的什么？  
- 8. [ ]  怎么学习前端的？(我说看书，看视频，看博客)看了哪些书？  
-   
-   
+ 
