--- a/source/_posts/1-前端知识分类/网络和安全类/前端鉴权.md
+++ b/source/_posts/1-前端知识分类/网络和安全类/前端鉴权.md
@@ -73,7 +73,7 @@ token一般来说，有三种
 
 
 
-# JWT 
+## JWT 
 
 JWT由三部分组成：
 1. header 头部
@@ -81,7 +81,7 @@ JWT由三部分组成：
 3. signature 签证
 
 
-## header
+### header
 
 1. ==声明类型==， 这是jwt
 2. ==声明类型的算法==，通常直接使用 HMAC SHA256
@@ -102,7 +102,7 @@ JWT由三部分组成：
 `eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9`
 
 
-## payload
+### payload
 
 存放有效信息的地方。由三部分组成
 
@@ -133,7 +133,7 @@ JWT由三部分组成：
 
 
 
-## signature
+### signature
 
 第三部分是一个签证信息，该签证信息由三部分组成
 1. header(base64后的)
@@ -159,7 +159,7 @@ const signature = HMACSHA256(encodeString, 'secret')
 > jwt是保存在服务器端，jwt的签发也是发生在服务器端的，==secret就是用来进行jwt的签发和jwt的验证==，所以他就是服务器端的私钥，任何场景都不应该泄露给客户端。
 > 一旦客户端得知这个secret, 那就意味着客户端可以自我签发jwt了
 
-## 应用：
+### 应用：
 
 一般是在请求头添加 `Authorization`, 并添加  `Bearer` 标注
 
@@ -172,8 +172,41 @@ fetch('api/user/1', {
 ```
 
 
-优点
-1. 不需要操作数据库，直接代码里校验
 
 
-[什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
+### JWT优点
+
+不需要请求数据库
+
+### JWT缺点: 注销登录后，token仍然有效
+
+注销登录后，token仍然有效，相比session 而言，注销后，后段可以将该sessionId从数据库删除掉，与之相关的场景有
+
+1. 退出登录;
+2. 修改密码;
+3. 服务端修改了某个用户具有的权限或者角色；
+4. 用户的帐户被删除/暂停。
+5. 用户由管理员注销；
+
+
+一些解决方案
+
+1. ==将 token 存入内存数据库==：将 token 存入 DB 中，redis 内存数据库在这里是是不错的选择。如果需要让某个 token 失效就直接从 redis 中删除这个 token 即可。但是，这样会导致每次使用 token 发送请求都要先从 DB 中查询 token 是否存在的步骤，而且违背了 JWT 的无状态原则
+2. ==黑名单机制==：和上面的方式类似，使用内存数据库比如 redis 维护一个黑名单，如果想让某个 token 失效的话就直接将这个 token 加入到 黑名单 即可。然后，每次使用 token 进行请求的话都会先判断这个 token 是否存在于黑名单中
+3. ==修改密钥 (Secret)== : 为每个用户都创建一个专属密钥，若想让某个 token 失效，我们直接修改对应用户的密钥即可。但是，这样相比于前两种引入内存数据库带来了危害更大，比如：1⃣️如果服务是分布式的，则每次发出新的 token 时都必须在多台机器同步密钥。为此，你需要将必须将机密存储在数据库或其他外部服务中，这样和 Session 认证就没太大区别了。2⃣️  如果用户同时在两个浏览器打开系统，或者在手机端也打开了系统，如果它从一个地方将账号退出，那么其他地方都要重新进行登录，这是不可取的；
+4. ==保持令牌的有效期限短并经常轮换== ：很简单的一种方式，但是，会导致用户登录状态不会被持久记录，而且需要用户经常登录，用户体验差；
+
+## token优点
+
+
+1. 无状态
+2. 有效避免了CSRF 攻击
+3. 适合移动端应用
+4. 单点登录友好
+
+
+
+# 参考文章
+
+1. [什么是 JWT -- JSON WEB TOKEN](https://www.jianshu.com/p/576dbf44b2ae)
+2. [](https://mp.weixin.qq.com/s?__biz=Mzg2OTA0Njk0OA==&mid=2247485655&idx=1&sn=583eeeb081ea21a8ec6347c72aa223d6&chksm=cea2471cf9d5ce0aa135f2fb9aa32d98ebb3338292beaccc1aae43d1178b16c0125eb4139ca4)
