--- a/source/_posts/2-框架/Vue/0源码-主线.md
+++ b/source/_posts/2-框架/Vue/0源码-主线.md
@@ -4,11 +4,21 @@
 
 Vue 初始化的过程做了几件事情，==合并配置==，==初始化生命周期==，==初始化事件中心，==初始化渲染==，==初始化 data、props、computed、watcher==等等
 
+详见 => [4源码-new Vue](/Blog/2-框架/Vue/4源码-newVue/)
+
+【注： 同时参考 new 操作符时发生了什么？】
+
+
+
 
 ## Vue实例挂载的实现
 
 在原型上定义$mount方法，用来将 `templete` 字符串转换为 `render` 方法。要牢记，所有 Vue 组件的渲染最终都需要 render 方法；
 另外一个重要的过程就是实例化一个渲染Watcher，在他的毁掉函数中会调用updateComponent 方法，再次方法中调用 vm.render 方法生成虚拟DOM， 最终调用 vm._update 更新DOM
+
+
+详见 => [5源码-Vue实例挂载的实现](/Blog/2-框架/Vue/5源码-Vue实例挂载的实现/)
+
 
 
 ## render
@@ -141,7 +151,7 @@ patch的整体流程：
 3. 框架和库的设计都是类似的，自身定义了很多默认配置，同时在初始化阶段传入自定义配置， 然后merge配置，来达到定制化不同需求的目的；
 
 
-详见 => 源码-合并配置.md
+详见 => 源码-合并配置
 
 
 
@@ -151,7 +161,7 @@ patch的整体流程：
 主要学习 Vue 生命周期中哥哥钩子函数的执行时机以及顺序
 通过分析知道在 created 钩子函数中可以访问到数据，在 mounted 钩子函数中可以访问到 DOM，在 destroy 钩子函数中可以做一些定时器销毁工作，了解它们有利于我们在合适的生命周期去做不同的事情
 
-详见 => 源码-生命周期.md
+详见 => 源码-生命周期
 
 
 
@@ -160,7 +170,7 @@ patch的整体流程：
 
 了解全局注册和局部注册的区别
 
-详见 => 源码-组件注册.md
+详见 => 源码-组件注册
 
 
 
@@ -195,7 +205,7 @@ setter: 派发更新
 收集依赖的目的是为了当这些响应式数据发送变化，触发它们的 setter 的时候，能知道应该通知哪些订阅者去做相应的逻辑处理，我们把这个过程叫派发更新，其实 Watcher 和 Dep 就是一个非常 经典的观察者设计模式的实现
 
 
-详见=> 依赖收集.md
+详见=> 依赖收集
 
   
 
