--- a/source/_posts/_乱七八拉糟/面经汇总.md
+++ b/source/_posts/_乱七八拉糟/面经汇总.md
@@ -1,2 +1,2 @@
 1. [B站、喜马拉雅、流利说、蜻蜓FM、爱回收等前端面试经历](https://www.javascriptc.com/2774.html)
-2. 
+2. [B站大佬的很多面经](https://www.ershicimi.com/p/01b2144418bc9ad00988a878e6c3a2e8)
