fix:修改webpack热更新原理

--- a/source/_posts/1-前端知识分类/算法相关类/常见排序.md
+++ b/source/_posts/1-前端知识分类/算法相关类/常见排序.md
@@ -1,8 +1,11 @@
 常见的排序算法有
 
 1. 快速排序
-2. 选择排序
-3. 冒泡排序
+2. 冒泡排序
+3. 选择排序
+4. 插入排序
+5. 归并排序
+6. 希尔排序
 
 
 # 快速排序
@@ -16,7 +19,7 @@
 3. 递归的将小于基准的子数列和大于基准的子数列进行排序；
 4. 最后每个子数列分区仅剩一个元素则停止；
 
- 
+
 
 ## 基础实现
 
@@ -88,11 +91,11 @@ function quickSort1(array) {
 ```js
 /* 1. 基本写法 */
 function bubbleSort(array) {
+  // 外层循环次数即数组长度减1
   let times = array.length - 1;
   while (times) {
-    // 数列尾部已经有顺序的元素个数
-    const hadSortLength = times;
-    for (let j = 0; j < hadSortLength; j++) {
+    // 内层循环次数即未排序元素个数减1
+    for (let j = 0; j < times; j++) {
       if (array[j] > array[j + 1]) {
         [array[j], array[j + 1]] = [array[j + 1], array[j]];
       }
@@ -121,9 +124,8 @@ function bubbleSort(array) {
   let times = array.length - 1;
   while (times) {
     let flag = false;
-    // 数列尾部已经有顺序的元素个数
-    const hadSortLength = times;
-    for (let j = 0; j < hadSortLength; j++) {
+    // 内层循环次数即未排序元素个数减1
+    for (let j = 0; j < times; j++) {
       if (array[j] > array[j + 1]) {
         [array[j], array[j + 1]] = [array[j + 1], array[j]];
         flag = true;
@@ -139,7 +141,7 @@ function bubbleSort(array) {
 }
 ```
 
- 
+
 
 ## 性能
 
@@ -239,7 +241,7 @@ function insertionSort(arr) {
 1. 时间复杂度：
    1. 最好的情况 => 待排序数组是有序的，每趟循环只需要当前数与前面元素比较一次，该情况下一共需要比较 n-1 次，时间负责度为 O(N);
    2. 最坏的情况 => 待排序数组是逆序的，需比较总次数记为：1+2+3+…+N-1，所以，插入排序最坏情况下的时间复杂度为 O(N^2);
-2. 空间复杂度：常数阶 O(1) 
+2. 空间复杂度：常数阶 O(1)
 
 
 
