fix:部分文章细节修改

--- a/source/_posts/1-前端知识分类/算法相关类/常见排序.md
+++ b/source/_posts/1-前端知识分类/算法相关类/常见排序.md
@@ -21,13 +21,52 @@
 
 
 
-## 基础实现
+## 基础实现1
+
+
+```js
+const quickSort = (array) => {
+  const sort = (arr, leftIndex = 0, rightIndex = arr.length - 1) => {
+    if (leftIndex >= rightIndex) {
+      // 如果左边的索引大于等于右边的索引说明整理完毕
+      return;
+    }
+    let left = leftIndex;
+    let right = rightIndex;
+    const baseVal = arr[right]; // 取无序数组最后一个数为基准值
+
+    while (left < right) {
+      // 把所有比基准值小的数放在左边大的数放在右边
+      while (left < right && arr[left] <= baseVal) {
+        // 找到一个比基准值大的数交换
+        left++;
+      }
+      arr[right] = arr[left]; // 将较大的值放在右边如果没有比基准值大的数就是将自己赋值给自己（left 等于 right）
+      while (right > left && arr[right] >= baseVal) {
+        // 找到一个比基准值小的数交换
+        right--;
+      }
+      arr[left] = arr[right]; // 将较小的值放在左边如果没有找到比基准值小的数就是将自己赋值给自己（i 等于 right）
+    }
+    arr[right] = baseVal; // 将基准值放至中央位置完成一次循环（这时候 right 等于 i ）
+    sort(arr, leftIndex, right - 1); // 将左边的无序数组重复上面的操作
+    sort(arr, right + 1, rightIndex); // 将右边的无序数组重复上面的操作
+  };
+  const newArr = array.concat(); // 为了保证这个函数是纯函数拷贝一次数组
+  sort(newArr);
+  return newArr;
+};
+```
+
+
+## 基础实现2
 
 1. 选取一个基数用于比较，（选取第一个元素作为基数）;
 2. 声明两个数组，分别是left, right;
 3. 循环遍历该数组除了基数外的其他元素，大于等于基础放在right, 小于基数放在left;
 4. 对数组left和right递归调用函数自身，直至left和right均只剩下一个元素；
 
+> 但是网上看到有人说这个不算快排，每次递归都开辟了新的内存空间
 
 ```js
 function quickSort1(array) {
@@ -247,9 +286,32 @@ function insertionSort(arr) {
 
 
 
+# 希尔排序
+
+```js
+function ShellSort(arr) {
+  let len = arr.length;
+  for (
+    var fraction = Math.floor(len / 2);
+    fraction > 0;
+    fraction = Math.floor(fraction / 2)
+  ) {
+    for (var i = fraction; i < len; i++) {
+      for (
+        var j = i - fraction;
+        j >= 0 && arr[j] > arr[fraction + j];
+        j -= fraction
+      ) {
+        [arr[j], arr[fraction + j]] = [arr[fraction + j], arr[j]];
+      }
+    }
+  }
+  return arr;
+}
+```
 # other
 
-## 稳定排序
+## 什么叫稳定排序？
 
 待排序的记录序列中可能存在两个或两个以上关键字相等的记录。排序前的序列中Ri领先于Rj（即i<j）
 若在排序后的序列中Ri仍然领先于Rj，则称所用的方法是稳定的。
