--- a/source/_posts/1-前端知识分类/网络和安全类/_缓存.md
+++ b/source/_posts/1-前端知识分类/网络和安全类/_缓存.md
@@ -12,6 +12,8 @@
 2. 协商缓存（走服务器）
    1. last-modified/last-modified-since
    2. Etag/If-None-Match
+
+
 # 基本原理
 
 
@@ -20,7 +22,7 @@
 
 1、基本原理
 1）浏览器在加载资源时，根据请求头的==expires==和==cache-control==判断是否命中强缓存，是则直接从缓存读取资源，不会发请求到服务器。
-2）如果没有命中强缓存，浏览器一定会发送一个请求到服务器，通过==last-modified== 和 etag 验证资源是否命中协商缓存，如果命中，服务器会将这个请求返回，但是不会返回这个资源的数据，依然是从缓存中读取资源
+2）如果没有命中强缓存，浏览器一定会发送一个请求到服务器，通过==last-modified== 和 ==etag== 验证资源是否命中协商缓存，如果命中，服务器会将这个请求返回，但是不会返回这个资源的数据，依然是从缓存中读取资源
 3）如果前面两者都没有命中，直接从服务器加载资源
 
 2、相同点
