fix:隐藏一部分

--- a/source/_posts/1-前端知识分类/CSS相关类/常见布局.md
+++ b/source/_posts/1-前端知识分类/CSS相关类/常见布局.md
@@ -96,6 +96,7 @@ bug: 这么写其实item 的宽高是不相等的
 
 ## 方案1: 利用flex
 
+以下几个特性
 1. 项目属性，flex-grow, 属性值默认为0，表示即使有剩余空间也不放大
 2. 项目属性，flex-basis，属性默认值为auto,即项目的本来大小, 属性定义了在分配多余空间之前，项目占据的主轴空间;
 3. 项目属性，order 属性定义项目的排列顺序。数值越小，排列越靠前，默认为
