--- a/source/_posts/2-框架/Vue/0源码-主线.md
+++ b/source/_posts/2-框架/Vue/0源码-主线.md
@@ -46,7 +46,9 @@ export function initRender (vm: Component) {
 ```
 
 
-详见
+详见 => 6源码-render
+
+
 
 ## virtual Node-VNode
 
@@ -211,4 +213,5 @@ setter: 派发更新
 
 
 ## 派发更新
+## nextTick
 ## 计算属性 VS 侦听属性
