--- a/source/_posts/2-框架/Vue/3源码-数据驱动.md
+++ b/source/_posts/2-框架/Vue/3源码-数据驱动.md
@@ -1,5 +1,6 @@
 # 数据驱动
 
-Vue.js 一个核心是数据驱动，所谓数据驱动，及时我们想要修改DOM的时候，不需要直接操作DOM，而是通过修改数据。
-他相比我们的传统的前端开发，如使用JQuery 等前端哭直接修改DOM，大大简化了代码量。 
+Vue.js 一个核心是数据驱动，所谓数据驱动，就是我们想要 ==修改DOM的时候，不需要直接操作DOM，而是通过修改数据==。
+相比我们的传统的前端开发，如使用JQuery 等前端库直接修改DOM，大大简化了代码量。 
 特别是当交互复杂的时候，只关心数据的修改会让代码的逻辑变得非常清晰，因为DOM变成了==数据的映射==，我们所有的逻辑都是数据的修改，而不用触碰DOM，这样的代码更利于维护。
+vue patch算法会通过计算，获取最优的渲染方案，打补丁到DOM，而不会暴力全覆盖。
