--- a/source/_posts/__🍓面试知识点/执行上下文+作用域链+闭包.md
+++ b/source/_posts/__🍓面试知识点/执行上下文+作用域链+闭包.md
@@ -1,14 +1,17 @@
 # 回答
 
 ## 介绍一下javascript的执行上下文？
-1. 什么是执行上下文呢？当函数被调用时，会创建一个活动记录，这个活动记录又叫做执行上下文，这个记录会包含 **函数在哪里被调用**， **调用方式**，以及 **传入的参数**等信息，this就是记录的其中一个属性。会在函数执行的过程中用到。
+1. 什么是执行上下文呢？当函数被调用时，会创建一个活动记录，这个活动记录又叫做执行上下文，这个记录会包含 ==函数在哪里被调用==， ==调用方式==，以及 ==传入的参数==等信息，this就是记录的其中一个属性。会在函数执行的过程中用到。
 
 
 
 ## 介绍一下JavaScript作用域链？
-1. 什么是作用域链
-- 每个函数都有自己的 **执行环境** ，当执行流执行到一个函数时，函数的环境就会被推入到一个 **环境栈** 中，而在函数执行之后，栈将其环境弹出，将控制权返给之前的执行环境；
-- 当代码在一个环境中访问时，会创建变量对象的一个 **作用域链** 。作用域链的用途，就是 **保证对执行环境有权访问的所有变量和函数的有序访问** ；作用域链的前端，始终都是 **当前执行代码所在环境的变量对象** 。如果这个变量是函数，则将其活动对象作为变量对象；活动对象在最开始时只包含一个变量，即argumnets对象（这个对象在全局环境中是不存在的）。作用域链中的下一个变量对象来自包含环境，在下一个变量对象则来自再下一个包含环境。这样，一直延续到 **全局执行环境**。全局执行环境始终是作用域链中的最后一个对象。
+
+**什么是作用域链**
+
+1. 每个函数都有自己的 ==执行环境==，当执行流执行到一个函数时，函数的环境就会被推入到一个 ==环境栈== 中，而在函数执行之后，栈将其环境弹出，将控制权返给之前的执行环境；
+2. 当代码在一个环境中访问时，会创建变量对象的一个 ==作用域链== 。作用域链的用途，就是 ==保证对执行环境有权访问的所有变量和函数的有序访问== ；
+3. 作用域链的前端，始终都是 ==当前执行代码所在环境的变量对象== 。如果这个变量是函数，则将其活动对象作为变量对象；活动对象在最开始时只包含一个变量，即argumnets对象（这个对象在全局环境中是不存在的）。作用域链中的下一个变量对象来自包含环境，在下一个变量对象则来自再下一个包含环境。这样，一直延续到 **全局执行环境**。全局执行环境始终是作用域链中的最后一个对象。
 
 ```javascript
 
@@ -25,7 +28,10 @@ sayColor()  // 'red'
 - 可以在函数内部访问到变量color，就是因为可以在这个作用域链中找到他；
 - 内部环境可以通过作用域链访问所有的外部环境，但是外部环境不能访问内部环境的任何变量和函数；这些环境之间的联系是线性的，有次序的，每个环境都可以向上搜索作用域链，以查询变量和函数名； 但是任何环境都不能向下搜索作用域链而进入另一个执行环境；
 
-2. 延长作用域链
+
+
+
+1. 延长作用域链
 - 虽然执行环境的类型只有两种，全局和局部（函数），但还是有其他方法来延长作用域链，这么说是因为，可以通过一些手段，在作用域链的前端，临时增加一个变量对象，这个变量对象会在代码执行之后被移除。这两种情况下会发生这种现象，具体来说，当执行流进行到下面任何一个语句时，作用域链就会得到加长；
   - try-catch语句的catch块
   - with语句
