--- a/source/_posts/1-前端知识分类/JS相关类/继承相关.md
+++ b/source/_posts/1-前端知识分类/JS相关类/继承相关.md
@@ -28,15 +28,17 @@
 6. 组合寄生式继承: 
    1. 思想: 与组合继承相比，就是把 `超类型.prototype.constructor = 子类型; 子类型.prototype = 超类型.prototype` 的过程，改为让`超类型的副本`去做;
 
+
+
 ## 原型链继承
 
-**实现方法**：将子类型的prototype 指向超类型的实例；
+**实现方法**：将子类型的prototype 指向 ==超类型的实例==；
 
 这样，子类型就能够访问超类型的所有属性和方法
 
 ```javascript
 /* 原型链继承 */
-
+/* 实现 */
 // 定义超类型构造函数
 function Father() {
   this.colors = ["red", "green"];
@@ -48,6 +50,7 @@ function Son() {}
 // 使子类型构造函数的 原型，指向 超类的实例
 Son.prototype = new Father(); // 使Son的原型指向Father的实例
 
+/* 使用 */
 // 创建子类实例
 const instance1 = new Son();
 const instance2 = new Son();
@@ -61,6 +64,7 @@ console.log(Father.prototype.isPrototypeOf(instance2));
 
 <br>
 <br>
+
 
 **原型链继承问题1**，包含引用类型值的原型，包含引用类型值的原型属性会被所有实例共享；
 
@@ -155,25 +159,29 @@ console.log(instance1.age);   // 25
 
 
 **总结:**
+
 1. 缺点：方法都在函数内部定义，代码复用性差；
-2. 优点：
+2. 优点：  
   1. 可向超类型传值；
   2. 可为子类型实例单独定义属性;
 
 综上: 借用构造函数的方法也很少单独使用
 
 
+
+
 ## 组合继承
 
 
-结合原型链继承 和 借用构造函数继承, 发挥二者之长
+==结合原型链继承== 和 ==借用构造函数继承==, 发挥二者之长
 
-**实现思路**: 使用原型链实现对 **原型方法** 的继承，而通过借用构造函数实现对 **原型属性的继承**
+**实现思路**: 使用原型链实现对 ==原型方法== 的继承，而通过借用构造函数实现对 ==原型属性的继承==
 
 
 ```javascript
 
 /* 组合继承 */
+// 代码实现
 function Father(name) {
   this.name = name;
   this.colors = ["red", "green"];
@@ -196,6 +204,9 @@ Son.prototype.sayAge = function() {
   console.log(this.age);
 };
 
+
+
+// 测试
 const instance1 = new Son("Tom", 24); 
 instance1.sayName(); // 'Tom'
 instance1.sayAge(); // 24
@@ -210,11 +221,11 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 ```
 
-- 在该例子中，Father 构造函数定义了两个属性： name和colors, Father的原型定义了一个方法 sayName().
-- Son 构造函数在调用 Father 构造函数时传入了name 参数，紧接着又定义了自己的属性 age;
-- 然后，将 Father 的实例赋值给 Son 的原型；
-- 然后，又在该新原型上定义了方法 sayAge()
-- 这样一来，就可以让两个不同的 Son 实例，分别拥有自己的属性————包括colros属性，
+1. 在该例子中，Father 构造函数定义了 ==两个属性==： name和colors, Father的原型定义了一个==方法== sayName().
+2. Son 构造函数在调用 Father 构造函数时传入了name 参数，紧接着又定义了自己的属性 age;
+3. 然后，将 Father 的实例赋值给 Son 的原型；
+4. 然后，又在该新原型上定义了方法 sayAge()
+5. 这样一来，就可以让两个不同的 Son 实例，分别拥有自己的属性————包括colros属性，
 
 
 
@@ -231,10 +242,18 @@ console.log(instance2.colors); // [ 'red', 'green', 'black' ]
 
 综上: 组合式继承也是较常用的继承方法；
 
-## 原型链继承
+
+
+
+
+## 原型式继承
+
+
 
 **初代版本**： 借助原型可以基于已有的对象创建新对象，同时还不必因此创建自定义类型；
 本质上，是对传入的对象执行了一次浅拷贝
+
+
 
 ```javascript
 
@@ -349,7 +368,7 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 
 ## 寄生组合式继承 -- 最理想的继承范式
 
-寄生组合式继承，即，通过借用构造函数来继承属性，通过原型链的混成形式来继承方法
+寄生组合式继承，即，通过借用 ==构造函数来继承属性==，通过==原型链的混成形式==来继承方法
 不必为了指定子类型的原型而调用超类型的构造函数，我们所需要的无非就是超类型原型的一个副本
 
 **基本思路**：使用寄生式继承来继承超类型的原型，然后再将结果指定给子类型的原型；
@@ -363,6 +382,7 @@ instance2.friends; // [ 'Herry', 'Merry', 'cat' ] // 改变了
 ```javascript
 
 /* 组合继承 */
+// 实现
 // 定义超类型构造函数
 function Father(name) {
   this.name = name;
@@ -388,6 +408,8 @@ Son.prototype.sayAge = function() {
   console.log(this.age);
 };
 
+
+// 使用
 const instance1 = new Son("Tom", 24); // 调用子类构造函数，
 const instance2 = new Son("Marry", 12);
  
@@ -406,10 +428,13 @@ const instance2 = new Son("Marry", 12);
 <br>
 <br>
 
+
 **寄生组合继承的基本模式如下：**
+
 
 **首先**，创建函数 `inheritPrototype`,
 该函数创建超类型原型的副本，为副本添加 `constructor` 属性并指向子类型，子类型的原型指向该副本
+
 
 ```javascript
 /**
@@ -428,6 +453,7 @@ function inheritPrototype(son, father) {
 ```
 
 使用该函数，去替换前面例子中，为子类型原型赋值的语句，完整版如下
+
 
 ```javascript
 /* 寄生组合式继承 */
@@ -448,7 +474,8 @@ function Son(name, age) {
   this.age = age;
 }
 
-// 4. Father副本.prototype.constructor => Son; Son.prototype => Father副本.prototype
+// 4. (Father.prototype)的副本.constructor => Son; 
+//                          Son.prototype => Father.prototype的副本
 inheritPrototype(Son, Father)
 
 // 5. 在子类型的原型上添加方法
