--- a/source/_posts/1-前端知识分类/JS相关类/闭包相关.md
+++ b/source/_posts/1-前端知识分类/JS相关类/闭包相关.md
@@ -9,7 +9,7 @@
 闭包是指有权访问另一个函数作用域中的变量的函数；
 创建闭包的常见方式，就是在一个函数内部创建另一个函数；test
 
-当函数可以 **记住并访问** 其所在的 **词法作用域** ，使函数在他**本身词法作用域以外执行**，就产生了闭包；
+当函数可以 ==记住并访问== 其所在的 ==词法作用域== ，使函数在他 ==本身词法作用域以外执行==，就产生了闭包；
 
 
 ```js
