--- a/source/_posts/2-框架/Vue/12源码-生命周期.md
+++ b/source/_posts/2-框架/Vue/12源码-生命周期.md
@@ -60,7 +60,7 @@ Vue.prototype._init = function (options?: Object) {
 }
 ```
 
-可以看到 beforeCreate 和 created 的钩子调用是在 initState 的前后, 
+可以看到 beforeCreate 和 created 的钩子调用是在 ==initState的前后== , 
 initState 的作用是初始化 props、data、methods、watch、computed 等属性，
 那么显然 beforeCreate 的钩子函数中就不能获取到 props、data 中定义的值，也不能调用 methods 中定义的函数
 
