--- a/source/_posts/3-小李的读书笔记/设计模式.md
+++ b/source/_posts/3-小李的读书笔记/设计模式.md
@@ -271,8 +271,9 @@ calculateBonus('B', 1000) // 2000
 
 发布者可以在回调函数中填入一些参数，订阅者可以接收这些参数，比如房子单价、面积、户型等信息，订阅者接收到这些信息之后进行各自的处理；
 
+
 ```js
-const salesoffices = {} // 小李房产公司公共号容器
+const salesoffices = {} // 小李房产公司公众号容器
 salesoffices.clientList = [] // 存放订阅者的回调函数
 
 // 小李房产公司被订阅
@@ -285,7 +286,7 @@ salesoffices.trigger = function() {
     fn.apply(this, arguments) // arguments 是发布消息时带上的参数
   }
 }
-/* TODO: 这里的订阅我感觉又带你问题 */
+
 /* 测试 */
 // 小明订阅消息
 salesoffices.listen(function(price, squareMeter) {
@@ -304,6 +305,7 @@ salesoffices.trigger(2000, 88)
 salesoffices.trigger(3000, 40)
 
 ```
+
 
 这就是一个简单的发布-订阅模式，但是存在以下问题：
 
