add: 增加一些面试题

--- a/source/_posts/__面试知识点/面试别人.md
+++ b/source/_posts/__面试知识点/面试别人.md
@@ -33,6 +33,8 @@ vue/react 方向去问
 6. 移动端1px产生原因？实现方案？
 
 
+
+
 # 框架
 ## 公共
 1.介绍下MVVM，和MVC?
@@ -41,16 +43,15 @@ vue/react 方向去问
 
 
 ## Vue
-1. vue生命周期
-2. vue响应式的实现原理是什么?
-3. 组件中data为什么是一个函数?
+1. vue生命周期一般分别做什么事？
+2. 组件中data为什么是一个函数?
+3. vue响应式的实现原理是什么?
 4. vue3.0新特性有没有了解
-5. vue生命周期
 6. vue响应式的实现原理是什么?3组件中data为什么是一个函数?
 7. vue3.0新特性有没有了解
 8. vue3和vue2实现响应式有什么不同?
-9. V-show和v-if的区别
-10. computed和 watch 的区别和运用的场景
+9. V-show和v-if的区别？
+10. computed和 watch 的区别和运用的场景？
 11. 直接给一个数组项赋值，Vue 能检测到变化吗(比如，this.arr[3】=3)?
 12. vue开发写ts么? 如果写，使用的什么?
 
@@ -75,7 +76,9 @@ vue/react 方向去问
 
 ## typescript
 
-1. TypeScript和JacaScript相比有什么优势
+1. 开发中有使用typescript么?
+2. 你认为？
+3. TypeScript和JacaScript相比有什么优势
 
 
 # 设计模式
@@ -88,3 +91,47 @@ vue/react 方向去问
 3. HTTPS和HTTP有什么区别
 4. 介绍一下CDN是什么？以及他的应用场景
 5. 项目的鉴权流程？
+
+
+
+
+
+
+vue面试题
+
+1. 相关技术和项目经验？
+2. 你在项目中担任什么角色？
+3. vue各个生命周期分别做什么事？
+4. $nextTick的使用
+5. 为什么使用key? 有什么作用？不给key会产生什么问题？
+6. 日常开发中的项目结构
+7. vue组件中data为什么必须是一个函数？
+8. 什么情况下修改了this.data会触发页面刷新？
+9. vue常用的修饰符？
+10. Vue-router跳转和location.href有什么区别
+11. vue-router有两种模式，hash模式和history模式？hash模式和history模式区别？
+12. 项目中有遇到什么难点？后来通过什么方式解决？
+
+
+
+react面试题
+
+1. 相关技术和项目经验？
+2. 你在项目中担任什么角色？
+3. react各个生命周期分别做什么事？
+4. React中什么是非控组件 & 受控组件？
+   1. 举个时机开发中的例子
+5. 开发中使用状态管理么？什么时候使用状态管理器？
+6. useMomo什么用？什么使用使用？
+7. 开发中使用hook么？
+   1. react几开始有hook? 有哪些特性？
+   2. 请说说什么是useState？为什么要使用useState？
+8. 为什么使用key? 有什么作用？不给key会产生什么问题？
+9.  日常开发中的项目结构
+10. 你知道的React性能优化有哪些方法？
+11. 什么情况下修改了this.data会触发页面刷新？
+12. vue常用的修饰符？
+13. 使用React写一个todo应用，说说你的思路?
+14. react-router跳转和location.href有什么区别
+<!-- 13. vue-router有两种模式，hash模式和history模式？hash模式和history模式区别？ -->
+14. 项目中有遇到什么难点？后来通过什么方式解决？
