add: 添加几条面经

--- a/source/_posts/面试知识点/本人面经.md
+++ b/source/_posts/面试知识点/本人面经.md
@@ -1,4 +1,18 @@
+
+
+
 # 我的面经
+
+## 牛客模拟(字节)
+1. 你更喜欢多人协作还是独立解决问题？
+2. 请你说说https加密解密流程？
+3. call和apply的区别？
+4. 请你说说express，中间件？
+5. 请你说说既然函数是引用类型，为什么 vue 的 data 还是可以用函数？
+
+
+
+
 ## 数联
 （公司主要做react）
 
@@ -129,5 +143,8 @@
  6. [ ]  H5项目，如何处理兼容性？
  7. [ ]  对项目有什么技术推动？有团队内做过技术分享么？分享的什么？
  8. [ ]  怎么学习前端的？(我说看书，看视频，看博客)看了哪些书？
+
+
+
 
 
