add: 添加面试题

--- a/source/_posts/面试知识点/面试别人的问题.md
+++ b/source/_posts/面试知识点/面试别人的问题.md
@@ -7,7 +7,7 @@ vue/react 方向去问
 
 ## JS
 1. js数据类型
-   1. 基本数据类型(原始类型)：undefined, null, Number, string, Boolean, BigInt, Symbol, 
+   1. 基本数据类型(原始类型)：undefined, null, Number, string, Boolean, BigInt, Symbol,
    2. 引用数据类型：Object
 2. 事件流
    1. 冒泡和捕获分别是什么？
@@ -64,7 +64,7 @@ vue/react 方向去问
 1. react生命周期
 2. React 中 refs 作用是什么？
 3. 什么是高阶组件？
-4. 为什么不直接更新 `state` 呢 ? 
+4. 为什么不直接更新 `state` 呢 ?
 5. react-router Switch 的作用是什么？
 
 
@@ -100,3 +100,39 @@ vue/react 方向去问
    1. 最多需要扫描多少次？
 3. 快速排序的实现可以口述下么？
    1. 最多需要扫描多少次？
+
+
+
+
+
+# 高级一点
+
+1. 编辑页面，离开页面前要用户确认后再离开？我该怎么做？
+2. computed和 watch 的区别和运用的场景？
+   1. 我能修改computed的值么？为什么？会怎么样？
+3. .sync 用过么？
+   1. 使用场景？
+4. ref有什么作用？
+5. 如果一个element的table, 多处使用，只有几列不同，你会怎么做？
+6. element 的table 我想做必输校验，怎么做？
+7. 什么时候你会考虑抽成组件？
+   1. 那组件件怎么传参？
+   2. prop作为弹窗的初始参数？
+8. key有什么作用？
+   1. 如果不给有什么问题？
+   2. 如果id重复会怎么样？
+9. webpack 的loader有什么作用？
+10. 列表页=》详情页，有一些搜索参数，从详情页回来，参数还在么？
+   1. 如果我想让他不消失有几种方法？
+11. vuex有用过么？
+   2.  什么情况下会用？
+   3.  页面离开后，我能访问上一个页面vuex state么？
+   4. 如果我有三个tab, 他们的数据和参数是独立的，但是方法是完全相同的，你会怎么处理？
+12. 怎么理解vue的this？
+13. if-else 日常开发有什么优化方式？
+14. 开发中用什么ui库
+    1.  如果这个UI库，有一些功能不支持，你有什么思路？
+15. 项目终于过什么难题？
+16. git流程
+
+
