fix: 删除几篇文章

--- a/source/_posts/1-前端知识分类/JS基础/作用域链.md
+++ b/source/_posts/1-前端知识分类/JS基础/作用域链.md
@@ -1,13 +1,5 @@
-# 回答
-
-## 介绍一下javascript的执行上下文？
-1. 什么是执行上下文呢？当函数被调用时，会创建一个活动记录，这个活动记录又叫做执行上下文，这个记录会包含 ==函数在哪里被调用==， ==调用方式==，以及 ==传入的参数==等信息，this就是记录的其中一个属性。会在函数执行的过程中用到。
-
-
-
-## 介绍一下JavaScript作用域链？
-
-**什么是作用域链**
+# 1. 作用域链
+## 1.1. 什么是作用域链
 
 1. 每个函数都有自己的 ==执行环境==，当执行流执行到一个函数时，函数的环境就会被推入到一个 ==环境栈== 中，而在函数执行之后，栈将其环境弹出，将控制权返给之前的执行环境；
 2. 当代码在一个环境中访问时，会创建变量对象的一个 ==作用域链== 。作用域链的用途，就是 ==保证对执行环境有权访问的所有变量和函数的有序访问== ；
@@ -69,61 +61,5 @@ const result = compare(2, 3);
 - 对于这个例子中的compare()函数的执行环境而言，其作用域链包含两个变量对象，本地活动对象和全局变量对象。
 - 作用域链本质上是一个指向变量对象的指针列表，他只引用但不实际包含变量对象
 - 无论什么时候在函数中搜索一个变量时，就会从作用域链中搜索具有相应名字的变量，一般来讲，当函数执行完毕后，局部活动对象就会被销毁，内存中仅保存全局作用域(全局环境的活动对象)，但是闭包的情况有所不同
-
-
-
-
-## 介绍一下JavaScript的闭包是什么？已经应用的场景有哪些？
-
-### 闭包和闭包的作用域链
-
-- 闭包是指有权访问另一个函数作用域中的变量的函数。创建闭包的常见方式，就是在一个函数内部创建另一个函数。
-- 第三四行代码是内部函数中的代码（一个匿名函数），这两行代码访问了外部函数
-
-```javascript
-function createComparisonFunction(propertyName) {
-  return function(object1, object2) {
-    const value1 = object1[propertyName];
-    const value2 = object2[propertyName];
-    if (value1 > value2) {
-      return 1;
-    } else if (value1 < value2) {
-      return -1;
-    } else {
-      return 0;
-    }
-  };
-}
-```
-- 闭包的作用域链（如下图）
-
-<img src="/Blog/images/闭包作用域链.png" title="createComparisonFunction和内部函数的作用域链" width="70%" height="50%">
-
-
-
-
-
-
-
-
-### 闭包应用场景
-
-
-1. setTimeout()
-
-```javascript
-
-function wait(message) {
-  setTimeout( function timer() {
-      console.log( message );
-    }, 1000);
-}
-
-wait( "Hello,hello!" );
-
-```
-
-> 1.timer 还持有变量message的引用 ，因此形成涵盖wait()函数作用域的闭包；
-> 2.wait() 执行1s后，他的内部作用域并不会消失，timer函数依然保有wait()作用域的闭包
 
 
