--- a/source/_posts/面试知识点/面试别人的问题.md
+++ b/source/_posts/面试知识点/面试别人的问题.md
@@ -107,32 +107,46 @@ vue/react 方向去问
 
 # 高级一点
 
-1. 编辑页面，离开页面前要用户确认后再离开？我该怎么做？
-2. computed和 watch 的区别和运用的场景？
+1. vue data是函数还是对象？
+   1. 为什么不能是对象？
+2. 怎样理解 Vue 的单向数据流
+   1. 好处是什么？
+3. vuex 有用过么？
+   1. mutation 和action 通常做什么？有什么区别？
+4. 编辑页面，离开页面前要用户确认后再离开？我该怎么做？
+5. 讲一下你对 Vue 生命周期的理解？
+6. Vue 的父组件和子组件生命周期钩子函数执行顺序？
+7. nextTick 用过么？通常什么时候会用？
+8. vue响应式的实现原理是什么?
+9. computed和 watch 的区别和运用的场景？
    1. 我能修改computed的值么？为什么？会怎么样？
-3. .sync 用过么？
+10. 直接给一个数组项赋值，Vue 能检测到变化吗？
+11. 怎么理解vue的this？
+12. 列表页=》详情页，有一些搜索参数，从详情页回来，参数还在么？
+   如果我想让他不消失有几种方法？
+10. ref有什么作用？
+11. .sync 用过么？
    1. 使用场景？
-4. ref有什么作用？
-5. 如果一个element的table, 多处使用，只有几列不同，你会怎么做？
-6. element 的table 我想做必输校验，怎么做？
-7. 什么时候你会考虑抽成组件？
-   1. 那组件件怎么传参？
-   2. prop作为弹窗的初始参数？
-8. key有什么作用？
-   1. 如果不给有什么问题？
-   2. 如果id重复会怎么样？
-9. webpack 的loader有什么作用？
-10. 列表页=》详情页，有一些搜索参数，从详情页回来，参数还在么？
-   1. 如果我想让他不消失有几种方法？
-11. vuex有用过么？
-   2.  什么情况下会用？
-   3.  页面离开后，我能访问上一个页面vuex state么？
-   4. 如果我有三个tab, 他们的数据和参数是独立的，但是方法是完全相同的，你会怎么处理？
-12. 怎么理解vue的this？
-13. if-else 日常开发有什么优化方式？
-14. 开发中用什么ui库
-    1.  如果这个UI库，有一些功能不支持，你有什么思路？
-15. 项目终于过什么难题？
-16. git流程
+12. 如果一个element的table, 多处使用，只有几列不同，你会怎么做？
+13. 什么时候你会考虑抽成组件？
+   2. 那组件件怎么传参？
+   3. prop作为弹窗的初始参数？
+14. key有什么作用？
+   4. 如果不给有什么问题？
+   5. 如果id重复会怎么样？
+15. webpack 的loader有什么作用？
+16. if-else 日常开发有什么优化方式？
+17. 开发中用什么ui库
+   1. 如果这个UI库，有一些功能不支持，你有什么思路？
+18. 项目终于过什么难题？
+19. 项目中有做代码review么？你会关注什么？
+   1. 你认为你有什么比较好的代码习惯？
+20. 说几种比较熟悉的设计模式，简单介绍下？
+21. git流程
+22. vuex有用过么？
+   6.  什么情况下会用？
+   7.  页面离开后，我能访问上一个页面vuex state么？
+   8. 如果我有三个tab, 他们的数据和参数是独立的，但是方法是完全相同的，你会怎么处理？
+23. element 的table 我想做必输校验，怎么做？
 
 
