--- a/source/_posts/1-前端知识分类/JS基础/闭包相关.md
+++ b/source/_posts/1-前端知识分类/JS基础/闭包相关.md
@@ -415,3 +415,60 @@ alert(object.getNameFunc()());  // "My Object"
 
 
 
+
+
+
+## 介绍一下JavaScript的闭包是什么？已经应用的场景有哪些？
+
+### 闭包和闭包的作用域链
+
+- 闭包是指有权访问另一个函数作用域中的变量的函数。创建闭包的常见方式，就是在一个函数内部创建另一个函数。
+- 第三四行代码是内部函数中的代码（一个匿名函数），这两行代码访问了外部函数
+
+```javascript
+function createComparisonFunction(propertyName) {
+  return function(object1, object2) {
+    const value1 = object1[propertyName];
+    const value2 = object2[propertyName];
+    if (value1 > value2) {
+      return 1;
+    } else if (value1 < value2) {
+      return -1;
+    } else {
+      return 0;
+    }
+  };
+}
+```
+- 闭包的作用域链（如下图）
+
+<img src="/Blog/images/闭包作用域链.png" title="createComparisonFunction和内部函数的作用域链" width="70%" height="50%">
+
+
+
+
+
+
+
+
+### 闭包应用场景
+
+
+1. setTimeout()
+
+```javascript
+
+function wait(message) {
+  setTimeout( function timer() {
+      console.log( message );
+    }, 1000);
+}
+
+wait( "Hello,hello!" );
+
+```
+
+> 1.timer 还持有变量message的引用 ，因此形成涵盖wait()函数作用域的闭包；
+> 2.wait() 执行1s后，他的内部作用域并不会消失，timer函数依然保有wait()作用域的闭包
+
+
