add: 添加面试别人的收获

--- a/source/_posts/项目复盘/民生星探-移动端.md
+++ b/source/_posts/项目复盘/民生星探-移动端.md
@@ -1,3 +1,19 @@
-1. 保存图片方案的实现
-2. 一定要写mock, 摆脱对环境(微信授权)/后端接口的依赖
-3.
+## html保存为图片方案及踩坑
+
+1. 需求
+   1. html
+   2. 页面删去部分dom
+   3. 并在指定位置插入dom
+   4. 生成jpg
+   5. 微信h5
+
+2. 遇到的难题
+
+
+
+## 其他心得
+
+1. 涉及授权类页面，一定一定要 **mock数据**
+   1. 摆脱对环境(微信授权)/后端接口的依赖;
+   2. 业务逻辑情况较多，更易于考虑完善的情况;
+   3. 容易调试和定位bug;
