--- a/source/_posts/项目复盘/自动化报告.md
+++ b/source/_posts/项目复盘/自动化报告.md
@@ -1,3 +1,17 @@
+## word导出方案
+
 1. word导出方案整套流程
-2. 为什么用tab的方式修改？
+   1. 材料：html字符串； 结果：格式完整个的word, 包括字体、样式，颜色，table、标题等；
+   2. 前端可以做么？- 不行， 因为部分导出需求并不在我们系统；
+   3. 谁来做：后端？ 后端调研后给出结论，标题失效
+   4. 于是考虑
+
+
+
+
+
+
+## 项目 => tabs 改造
+
+1. 为什么用tab的方式修改？
    1. 不修改代码结构
