--- a/source/_posts/1-前端知识分类/TypeScript/测试目录结构.md
+++ b/source/_posts/1-前端知识分类/TypeScript/测试目录结构.md
@@ -25,15 +25,7 @@ interface Demo {
 ```
 
 
+ddd
 
 
-ssss22ss
-
-s
-
-
-![](2021-04-09-16-45-10.png)
-
-
-
-![](2021-04-09-16-48-33.png)
+![](source/images/测试目录结构-21-04-10-08-58-13.png)
