--- a/source/_posts/知识梳理/网络.md
+++ b/source/_posts/知识梳理/网络.md
@@ -1,33 +1,32 @@
-1. Http和https区别？
+## 1.Http和https区别？
 
- 
-
- 
 
 |                | HTTP                             | HTTPs                                                 |
 |----------------|----------------------------------|-------------------------------------------------------|
-| 报文           | 明文                             | 使用随机key加密后传输                                 |
-| 端口           | 建立在TCP                        | 443                                                   |
 | 证书           | 不需要                           | ca                                                    |
 | 建立连接的过程 | 客户端和服务器端三次握手建立链接 | 见下描述                                              |
-| 速度           | 快一点，三次握手，9个包          | 慢一点，除了TCP的三个包，还有SSL产生的9个包，共12个包 |
+| 端口           | 建立在TCP                        | 443                                                   |
 | 简介           | 建立在TCP协议上                  | HTTPS 经由 HTTP 进行通信，但利用 SSL/TLS 来加密数据包 |
+| 速度           | 快一点，三次握手，9个包          | 慢一点，除了TCP的三个包，还有SSL产生的9个包，共12个包 |
+| 报文           | 明文                             | 使用随机key加密后传输                                 |
 
 
 HTTPs的加密过程
-1. 客户端向服务器发起请求，然后连接到server的443端口；
-2. 服务器生成 私钥和公钥，将公钥 发送到客户端；
-3. 客户端收到公钥，生成随机key, 使用公钥对随机key进行加密后，传送到服务器；
-4. 服务器收到后，使用私钥，解密数据包后，得到随机key;
-5. 然后双方开始进行传输数据，服务器会使用key对数据进行加密后发送给客户端，客户端也使用随机key, 对数据进行解密；
+   1. 客户端向服务器发起请求，然后连接到server的 **443端口**；
+   2. 服务器生成 **私钥和公钥**，将 **公钥** 发送到客户端；
+   3. 客户端收到公钥，生成 **随机key**, 使用公钥对随机key进行加密后，传送到服务器；
+   4. 服务器收到后，使用 **私钥**，解密数据包后，得到随机key;
+   5. 然后双方开始进行传输数据，服务器会使用 **key对数据进行加密** 后发送给客户端，客户端也使用 **随机key**, 对数据进行解密；
 
 
-2. 介绍下OAuth
-   1. 客户端向用户申请给予授权，
-   2. 用户同意给予授权；
-   3. 客户端使用该授权，向认证服务器申请令牌；
-   4. 认证服务器对客户端进行认证以后，确认无误，同意发放令牌；
-   5. 客户端使用令牌向资源服务器发起资源请求；
-   6. 资源服务器校验令牌无误，返回资源；
+
+
+## 2.介绍下OAuth
+1. 客户端向用户申请给予授权，
+2. 用户同意给予授权；
+3. 客户端使用该授权，向认证服务器申请令牌；
+4. 认证服务器对客户端进行认证以后，确认无误，同意发放令牌；
+5. 客户端使用令牌向资源服务器发起资源请求；
+6. 资源服务器校验令牌无误，返回资源；
 
 
