--- a/source/_posts/面试知识点/面试别人的问题.md
+++ b/source/_posts/面试知识点/面试别人的问题.md
@@ -3,7 +3,7 @@
 vue/react 方向去问
 
 
-# 基础知识类
+刚开始
 
 ## JS
 1. [ ] js数据类型
@@ -105,7 +105,7 @@ vue/react 方向去问
 
 
 
-# 高级一点
+3月
 
 1. [ ] vue data是函数还是对象？
    1. [ ] 为什么不能是对象？
@@ -122,7 +122,7 @@ vue/react 方向去问
    1. [ ] 我能修改computed的值么？为什么？会怎么样？
 10. [ ] 直接给一个数组项赋值，Vue 能检测到变化吗？
 11. [ ] 怎么理解vue的this？
-12. [ ] 列表页=》详情页，有一些搜索参数，从详情页回来，参数还在么？
+12. [ ] 列表页 => 详情页，有一些搜索参数，从详情页回来，参数还在么？
    如果我想让他不消失有几种方法？
 10. [ ] ref有什么作用？
 11. [ ] .sync 用过么？
@@ -147,16 +147,29 @@ vue/react 方向去问
    8. [ ]  什么情况下会用？
    9. [ ]  页面离开后，我能访问上一个页面vuex state么？
    10. [ ] 如果我有三个tab, 他们的数据和参数是独立的，但是方法是完全相同的，你会怎么处理？
-23. [ ] element 的table 我想做必输校验，怎么做？
-
-
 24. [ ] 开发模式
+25. [ ] 前端跨域产生原因，
+    1.  [ ] 解决方法
+26. [ ] 有遇到过什么难题？怎么解决的？
 
 
 
 
 
+04-12:
 
-# 结合场景问
-
-1. 举例具体场景，提出问题
+项目中角色？
+git流程？
+code review? 关注点？好的代码习惯？
+国际化怎么做的？
+权限？
+移动端适配？
+跨域？
+项目中的登陆流程？用户信息存储？
+vue data是函数还是对象？为什么不能是对象？
+Vue生命周期？ 父，子组件生命周期钩子函数执行顺序？各个生命周期通常做什么？created进行网络请求可以渲染出页面么？
+兄弟组件怎么传值？
+mutation 和action 通常做什么？有什么区别？
+key有什么作用？key重复？
+列表页 => 详情页，有一些搜索参数，从详情页回来，参数还在么？如果我想让他不消失有几种方法？
+想问没问：vue优化？
