del: 删除多余文件

--- a/source/_posts/1-JavaScript/专题深入/原型和原型链的理解.md
+++ b/source/_posts/1-JavaScript/专题深入/原型和原型链的理解.md
@@ -1,3 +1,12 @@
+9.  原型链的理解：
+    1.  我理解，所有的对象都有一个 `prototype` 属性，指向他的原型，原型都有个costructor属性指向该对象;
+    2.  我们可以通过new操作符创建该对象的实例，创建的实例拥有一个 `__proto__` 指针，指向其构造函数的原型对象;
+    3.  实例可以继承其原型对象的所有可继承属性和方法;
+    4.  原型链，当我们在一个对象上查找某属性的时候，若该对象有，就直接返回，若没有，则沿着原型链继续向上查到，查找到 OBject.prototype 即停止;
+    5.  几乎所有的原型对象都是位于原型链顶端的 `Object` 的实例;
+
+
+
 ## 原型和原型链
 
 > JavaScript的原型存在诸多矛盾，他的某些复杂的语法看起来像是基于类的语言，这些语法问题掩盖了他的原型机制。他不直接让对象从其他对象继承，反而插入了一个多余的简介曾， 通过构造函数产生对象
@@ -8,7 +17,7 @@ this.prototype = { constructor: this}
 ```
 
 
-新函数对象会被赋予一个`prototype`属性，该属性的值是一个包含`constructor`属性且属性值是该新函数的对象。 这个`prototype`对象是用来存放**继承特征**的地方。 
+新函数对象会被赋予一个`prototype`属性，该属性的值是一个包含`constructor`属性且属性值是该新函数的对象。 这个`prototype`对象是用来存放**继承特征**的地方。
 因为JavaScript没有提供一种方法用来确定哪个函数是存放继承特征的地方，所以每个函数都会得到一个prototype对象，constructor对象没什么用，重要是的`prototype`对象。
 
 
