--- a/source/_posts/1-JavaScript/专题深入/闭包是什么应用场景.md
+++ b/source/_posts/1-JavaScript/专题深入/闭包是什么应用场景.md
@@ -1,4 +1,15 @@
 
+5. 闭包相关 闭包原理？
+   1. 闭包指的是有权访问另一个词法作用域的函数
+   2. 常见的创建闭包的方式就是在一个函数内部创建另一个函数
+   3. 当函数可以记住并访问其所在的函数作用域，使函数可以在他本身词法作用域以外执行，就产生了闭包
+6. 闭包应用场景？
+   1. 函数柯里化
+   2. 变量缓存
+   3. 实现类的继承
+   4. 封装工厂函数
+   5. 匿名自执行函数，因为执行之后外部无法访问其内部变量，执行完即销毁内存空间？
+
 # 闭包相关
 
 
