--- a/source/_posts/4-其他/TypeScript/画瓢.md
+++ b/source/_posts/4-其他/TypeScript/画瓢.md
@@ -1,3 +1,7 @@
+# 文章收藏
+- (TypeScript 高级用法-掘金-字节)[https://juejin.cn/post/6926794697553739784#heading-20]
+
+
 # 泛型
 
 ## 介绍
@@ -363,3 +367,14 @@ createInstance(Bee).keeper.hasMask;   // typechecks!```
 ````
 
 
+## 泛型工具
+
+**ReturnType<T>**
+![](source/images/画瓢-21-04-29-09-40-56.png)
+
+
+**type OR interface?**
+![](source/images/画瓢-21-04-29-09-43-08.png)
+
+**全局变量**
+![](source/images/画瓢-21-04-29-10-00-07.png)
