add: 添加一张图片

--- a/source/_posts/1-JavaScript/专题/闭包是什么应用场景.md
+++ b/source/_posts/1-JavaScript/专题/闭包是什么应用场景.md
@@ -1,14 +1,4 @@
 
-5. 闭包相关 闭包原理？
-   1. 闭包指的是有权访问另一个词法作用域的函数
-   2. 常见的创建闭包的方式就是在一个函数内部创建另一个函数
-   3. 当函数可以记住并访问其所在的函数作用域，使函数可以在他本身词法作用域以外执行，就产生了闭包
-6. 闭包应用场景？
-   1. 函数柯里化
-   2. 变量缓存
-   3. 实现类的继承
-   4. 封装工厂函数
-   5. 匿名自执行函数，因为执行之后外部无法访问其内部变量，执行完即销毁内存空间？
 
 # 闭包相关
 
@@ -18,9 +8,9 @@
 > 关键词：作用域
 
 闭包是指有权访问另一个函数作用域中的变量的函数；
-创建闭包的常见方式，就是在一个函数内部创建另一个函数；test
 
-当函数可以 ==记住并访问== 其所在的 ==词法作用域== ，使函数在他 ==本身词法作用域以外执行==，就产生了闭包；
+当函数可以 **记住并访问** 其所在的 **词法作用域** ，使函数在他 **本身词法作用域以外执行**，就产生了闭包；
+创建闭包的常见方式，就是在一个函数内部创建另一个函数;
 
 
 ```js
@@ -135,7 +125,7 @@ createFunctions()[2]()   // 10
 ```javascript
 function createFuctions() {
   var arr = new Array()
-  for (var i = 0; i < 10; i++) {
+  for (let i = 0; i < 10; i++) {
     arr[i] = function () {
       return i
     }
@@ -151,7 +141,7 @@ createFunctions()[2]()   // 2
 
 解决方法2: arr[i] = 一个立即执行函数
 
-<!-- 通过创建一个匿名函数强制让闭包的结果符合预期, 也就是最终的 -->
+
 
 ```javascript
 function createFuctions() {
@@ -165,8 +155,8 @@ function createFuctions() {
   }
   return result
 }
-console.log(a()[0]())   // 0
-console.log(a()[1]())   // 1
+console.log(createFuctions()[0]())   // 0
+console.log(createFuctions()[1]())   // 1
 
 ```
 
@@ -183,18 +173,26 @@ console.log(a()[1]())   // 1
 
 
 ```javascript
-for(var i=0;i<10;i++){
-    setTimeout(function(){
-        console.log(i)//10个10
-    },1000)
+const demo = function () {
+  for (var i = 0;i < 10;i++) {
+    setTimeout(function () {
+      console.log(i)// 10个10
+    }, 1000)
+  }
+
+  setTimeout(function () {
+    console.log('hello world')
+  }, 1000)
 }
+demo()
+// 一次输出10个10 hello world
 ```
 
 出现原因
 
 1. setTimeout的参数一直持有变量i,形成了闭包;
-2. var 声明的i是全局变量;
-3. 每次for循环就是将定时器（微任务）加入微任务队列，for循环之后依次执行微任务队列中的任务，而此时的i==10;
+2. var 声明的变量 **i** 的作用域为demo的内部作用域;
+3. 每次for循环就是将定时器（微任务）加入宏任务队列，for循环之后依次执行宏任务队列中的任务，而此时的i==10;
 4. 任务队列的十个setTimeout 共享同一个词法作用域，由于循环在定时任务触发之前就已经执行完毕，由于var声明变量具有变量提升的特点，此时的i===10,因此每次取出的的setTimeout任务访问到的i的值都是10
 
 解决方法1: 使用let
@@ -203,10 +201,10 @@ for(var i=0;i<10;i++){
 
 
 ```javascript
-for(let i=0;i<10;i++){
-    setTimeout(function(){
-        console.log(i)//10个10
-    },1000)
+for (let i = 0;i < 10;i++) {
+  setTimeout(function () {
+    console.log(i)// 10个10
+  }, 1000)
 }
 ```
 
@@ -368,6 +366,8 @@ console.log(demo2.add1()) // 3
 
 
 ## 闭包常见两个面试题
+
+
 // 判断this指向
 ```javascript
 // 题目1
@@ -417,10 +417,7 @@ alert(object.getNameFunc()());  // "My Object"
 - 闭包会携带包含他的函数作用域，因此会比其他函数占用更多的内存，过度使用可能会导致内存占用过多；
 
 
-## 相关参考文章
-- MDN：https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Closures
-- 《你不知道的javascript(上)》
-- 阮一峰：http://www.ruanyifeng.com/blog/2009/08/learning_javascript_closures.html
+
 
 
 
@@ -483,3 +480,19 @@ wait( "Hello,hello!" );
 > 2.wait() 执行1s后，他的内部作用域并不会消失，timer函数依然保有wait()作用域的闭包
 
 
+
+
+1. 函数柯里化
+2. 变量缓存
+3. 实现类的继承
+4. 封装工厂函数
+5. 匿名自执行函数，因为执行之后外部无法访问其内部变量，执行完即销毁内存空间？
+
+
+
+
+
+## 相关参考文章
+- MDN：https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Closures
+- 《你不知道的javascript(上)》
+- 阮一峰：http://www.ruanyifeng.com/blog/2009/08/learning_javascript_closures.html
