fix: 修改其他文件夹名称为网络和算法和ts

--- a/source/_posts/4-网络和算法和ts/网络和安全类/缓存.md
+++ b/source/_posts/4-网络和算法和ts/网络和安全类/缓存.md
@@ -1,4 +1,13 @@
-# 介绍一下HTTP缓存策略？
+
+# 相关文章
+- [前端浏览器缓存知识梳理](https://juejin.cn/post/6947936223126093861)
+
+
+list
+- 什么是缓存？
+- 缓存有什么好处？
+- 什么是强缓存？
+- 什么是协商缓存？
 
 
 # 介绍下缓存？
