--- a/source/_posts/_无分类暂存/生活记录.md
+++ b/source/_posts/_无分类暂存/生活记录.md
@@ -1,8 +1,8 @@
 1. 《蝶恋花》-- 王国维
 
-阅尽天涯离别苦，不道归来，零落花如许。
-花底相看无一语，绿窗春与天俱莫。
-待把相思灯下诉，一缕新欢，旧恨千千缕。
+阅尽天涯离别苦，不道归来，零落花如许。<br/>
+花底相看无一语，绿窗春与天俱莫。<br/>
+待把相思灯下诉，一缕新欢，旧恨千千缕。<br/>
 最是人间留不住，朱颜辞镜花辞树。
 
 
@@ -12,5 +12,4 @@
 
 4. 谈到思想的乐趣，我就想到了我父亲的遭遇。我父亲是一位哲学教授，在五六十年代从事思维史的研究。在老年时，他告诉我，自己一生的学术经历，就如一部恐怖电影。每当他企图立论时，总要在大一统的官方思想体系里找自己的位置，就如一只老母鸡要在一个大搬家的宅院里找地方孵蛋一样。结果他虽然热爱科学而且很努力，但在一生中却没有得到思维的乐趣，只收获了无数的恐慌。他一生的探索，只剩下了一些断壁残垣，收到一本名为《逻辑探索》的书里，在他身后出版。众所周知，他那一辈的学人，一辈子能留下一本书就不错。这正是因为在那些年代，有人想把中国人的思想搞得彻底无味。我们这个国家里，只有很少的人觉得思想会有乐趣，却有很多的人感受过思想带来的恐慌。所以现在还有很多人以为，思想的味道就该是这样的。   - 《沉默的大多数》
 
-  
- 
+
