add: 1.修改了手写函数柯里化和手写bind; 2.添加大数相加

--- a/source/_posts/1-JavaScript/专题/函数柯里化.md
+++ b/source/_posts/1-JavaScript/专题/函数柯里化.md
@@ -2,8 +2,8 @@
 
 > 柯里化，也常译为“局部套用”，是把多参数函数转换为一系列单参数函数并进行调用的技术。这项技术以科学家Haskell Curry的名字命名。
 >    《javascript语言精粹》
-
 > curry 方法通过创建一个保存着原始函数和要被调用的参数的闭包来工作，他返回另一个参数，该函数被调用时，会返回调用原始函数的结果，并传递调用curry时的参数加上当前调用时的参数
+> !!能够固化一部分参数
 
 
 
@@ -52,23 +52,18 @@ fourDiscount(300)  // 120
 
 
 ```javascript
-/* 该例来自《javascript高级程序设计》 */
-/**
- * @des : 函数柯里化
- * @param {Function} [fn] 要进行柯里化的函数
- * @param {*} 其他参数
- * @return {*} 将参数通过函数fn处理之后的结果
- */
+/* 该例来自《javascript高级程序设计》，使用es6 做了修改 */
 function curry(fn) {
-  // curry 第一个参数是要进行柯里化的函数，其他参数是要传入的值
-  // 获取第一个参数外的其他参数
-  var args = Array.prototype.slice.call(arguments, 1); // args,包含了来自外部函数
-  return function() {
-    var innerArgs = Array.prototype.slice.call(arguments); // innerArgs，用来存放内部函数的所有参数
-    var finalArgs = args.concat(innerArgs); // finalArgs，内部外部所有的参数
-    return fn.apply(null, finalArgs); // 使用apply将结果传递给函数 fn
-  };
+    // 获取第一次传入的参数，固化的部分
+    const [,...args] = arguments; // args,包含了来自外部函数
+
+    return function() {
+        const innerArgs = Array.prototype.slice.call(arguments); // innerArgs，用来存放内部函数的所有参数
+        const finalArgs = [...args, ...innerArgs];
+        return fn.apply(null, finalArgs); // 使用apply将结果传递给函数 fn
+    };
 }
+
 
 function add(num1, num2) {
   return num1 + num2;
@@ -112,7 +107,6 @@ function curry(fn, ...args) {
 
 
 
-
 ## 写法3: 健壮版
 
 
@@ -141,18 +135,15 @@ curry(add, 1)(2, 3)(4)(5) // curry(...)(...) is not a function
 curry(add, 1)(2)(3)(4)(5) // curry(...)(...) is not a function
 ```
 
- 
-为了使curry更加健壮，我们需要判断用于是否已经输入了所有的参数（fn.length），
-若参数还未输入完毕，则返回一个函数使用户可以继续输入；
+
+为了使curry更加健壮，通过`fn.length`与当前参数的列表的长度，判断用户是否已经完全输入，
 若已经输入完毕，则返回参数根据函数`fn`的规则计算的结果，代码如下
+若参数还未输入完毕，则返回一个函数使用户可以继续输入；
 
 
-```javascript
+得到如下代码：
 
-function add(a, b, c, d, e) {
-  return a + b + c + d + e;
-}
-
+```js
 function curry(fn, ...args) {
   const length = fn.length;
 
@@ -160,48 +151,45 @@ function curry(fn, ...args) {
     const finalArgs = [...args, ..._args];
 
     if (finalArgs.length < length) {
-      return curry.call(this, fn, ...finalArgs);
+      return curry.apply(this, [fn, ...finalArgs]);
     } else {
       return fn.apply(this, finalArgs);
     }
   };
 }
-
 ```
 
-调用一下试试看,  都可以得到正确的结果
-
+测试使用
 ```javascript
+function add(a, b, c, d, e) {
+  return a + b + c + d + e;
+}
+
 console.log(curry(add, 1)(2, 3)(4)(5)); // 15
 console.log(curry(add)(1, 2, 3, 4, 5)); // 15
 console.log(curry(add)(1, 2)(3, 4, 5)); // 15
+
 ```
 
 
-## 写法4: 小李简化版本
+## 写法4: 对写法3进行简化
 
 
 ```js
-const add = function(val1, val2, val3, val4, val5) {
-  return val1 + val2 + val3 + val4 + val5;
-};
-
 function curry(fn, ...args) {
+  // 如果参数没有传完
   if (fn.length > args.length) {
-    return (...innerArgs) => curry.call(this, fn, ...args, ...innerArgs);
+    return (...innerArgs) => curry.apply(this, [fn, ...args, ...innerArgs]);
   } else {
     return fn.apply(this, args);
   }
 }
-
-let res = curry(add, 1)(2, 3)(4)(5);
-console.log(res); // 15
 ```
 
 
 
 
-## 应用
+## 函数柯里化的应用
 
 实际开发重的应用场景
 
@@ -216,22 +204,12 @@ vue源码中的`patch`函数(`_update`的核心)
 
 
 
-# 我的疑问？
+# 疑问
 
-正常来想，3 * 0.1 * 300 = 90，但是结果并不是？？为什么？
-
+正常来想，3 * 0.1 = 90，但是结果并不是？？为什么？
 
 ```javascript
-// 为什么不是 90
-function discount2(dis) {
-  return function(price) {
-    return dis * 0.1 * price;
-  };
-}
-// 五折
-const threeDiscount = discount2(3);
-threeDiscount(300);  // 90.00000000000001
-
+ 3 * 0.1 = 0.30000000000000004 ？
 ```
 
 
