--- a/source/_posts/1-JavaScript/专题/前端模块化规范.md
+++ b/source/_posts/1-JavaScript/专题/前端模块化规范.md
@@ -1,3 +1,17 @@
+## Es6 Module 和 common.js 的区别
+
+| Es6 Module             | commonJS                               |
+|------------------------|----------------------------------------|
+| 编译时静态分析引入     | 运行时加载                             |
+| 静态语法，只能写在顶层 | 动态引入，所以可以写在代码里，条件引入 |
+| 输出值的引用           | 输出值的拷贝                           |
+| 可以导出多个值         | 单个值导出                             |
+| this是undefined        | this是当前值                           |
+
+
+
+<!-- --------------以下忽视-------------- -->
+
 # 前端模块化规范
 
 共有四种前端模块化规范
@@ -19,9 +33,9 @@ ES6模块输出的是 **值的引用**
 - 输出的是值的引用，也就是说，原始值变了，import 加载的值也会跟着变化。
 - 因此，ES6模块是动态引用，并且不会缓存值，模块里面的变量绑定其所在的模块；
 
- 
+
 **使用方法**
- 
+
 两种情况
 
 情况1: export { 变量1, 变量2 }
@@ -81,7 +95,7 @@ var basicNum = 0;
 function add(a, b) {
   return a + b;
 }
-module.exports = { 
+module.exports = {
   add,
   basicNum
 }
@@ -146,8 +160,8 @@ ES6模块是编译时输出接口，CommonJS模块是运行时加载
 - 运行时加载：（common.js）模块就是对象，也就是在输入时是先加载整个模块，生成一个对象，然后再从这个对象上面读取方法；
 
 CommonJS 加载的是一个对象（即module.exports属性），该对象只有在脚本运行完才会生成。而 ES6 模块不是对象，它的对外接口只是一种静态定义，在代码静态解析阶段就会生成。
- 
- 
+
+
 
 
 ## AMD规范
